*Empty MediaWiki Message*

--- a/ཕྱི་འབྲེལ་དང་འབྲེལ་བའི་ནང་དོན།.mw
+++ b/ཕྱི་འབྲེལ་དང་འབྲེལ་བའི་ནང་དོན།.mw
@@ -1,6 +1,6 @@
 === ཕྱི་རྒྱལ་དང་མཐུན་འབྲེལ། ===
-<big>༉ འབྲུག་གི་ཕྱི་འབྲེལ་སྲིད་བྱུས་ཀྱི་ལམ་ལུགས་འགོ་ཐོག་དང་པ་ མཐོང་རྒྱ་མྱོང་བཅུག་པའི་འབྲུག་གི་དབུ་ཁྲིད་ཚུ་གི་གྲས་ལས་ འབྲུག་རྒྱལ་པོ་འཇིགས་མེད་དབང་ཕྱུག་མཆོག་གིས་མཛད་གནང་ནུག། དེ་ཡང་ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ་གྱིས་ དུས་རབས་༡༧ པའི་ནང་འབྲུག་རྒྱལ་ཁབ་འདི་ རང་དབང་རང་བཙན་ཅན་ཅིག་སྦེ་བཟོ་གནང་ཞིནམ་ལས་ ཕྱི་རྒྱལ་མཐུན་འབྲེལ་གྱི་ལམ་ལུགས་འདི་ གཟུར་གནས་ཀྱི་སྲིད་བྱུས་ཅིག་སྦེ་ར་ལུས་ནུག། འབྲུག་རྒྱལ་གཉིས་པའི་རྒྱལ་སྲིད་སྐབས་ འཛམ་གླིང་ངེས་མེད་གནས་སྟངས་ཅན་ཅིག་ལུ་གྱུར་སྡོད་ཡོད་རུང་ འབྲུག་རྒྱལཔོ་འཇིགས་མེད་དབང་ཕྱུག་མཆོག་གིས་ སྔར་སྲོལ་-གཟུར་གནས་ཀྱི་སྲིད་བྱུས་ཐོག་ འཛམ་གླིང་དཔལ་འབྱོར་མར་ཉམས་ ༼༡༩༣༠༽ དང་འཛམ་གླིང་དམག་ཆེན་ ༢ པའི་ ༼༡༩༣༩ - ༡༩༤༥༽ གནས་སྟངས་ཚུ་ལས་ གནོད་སྐྱོན་ག་ནི་ཡང་མེད་པར་རྒྱལ་བརྒྱུད་སྐྱོངས་གནང་ནུག། ཨིན་རུང་ཁྱིམ་ཚང་རྒྱ་གར་རྒྱལ་ཁབ་ཀྱི་རང་བཙན་དང་ རྒྱ་ནག་རྒྱལ་ཁབ་ཀྱི་སྟོབས་ཤུགས་ཡར་འཕར་འགྱོ་མི་གིས་ འབྲུག་རྒྱལ་ཁབ་གྱི་རང་བཙན་དང་ཞི་བདེ་ལུ་རྟག་པ་མེད་པའི་ཉེན་འཚུབས་ཚུ་ ཕོག་ཡོདཔ་ཨིན་མས། སྤུ་ན་ཁའི་ཆིངས་ཡིག་ ༡༩༡༠ ཅན་མ་གིས་ འབྲུག་ལུ་བཱིརི་ཊིཤ་གཞུང་གི་སྐུ་ཚབ་ཡིག་ཚང་གཞི་བཙུགས་ གནང་ནིའི་གྲོས་མཐུན་མ་བཀོད་པས། བཱིརི་ཊིཤ་གཞུང་དང་ཟུང་ཕྱོགས་མཐུན་འབྲེལ་ཡང་སྒང་སྟོག་ལུ་གཞི་བཙུགས་འབད་ཡོད་པའི བཱིརི་ཊིཤ་གཞུང་གི་སྲིད་དོན་འགོ་དཔོན་གྱི་འགོ་འདྲེན་ཐོག་མཛད་གནང་ནུག། གནམ་ལོ་ ༡༩༢༧ ལུ་ བཱིརི་ཊིཤ་གཞུང་གི་སྲིད་དོན་འགོ་དཔོན་ཨེཕ་ཨེམ་བེ་ལི་གིས་ འབྲུག་རྒྱལ་གཉིས་པའི་གསེར་ཁྲི་མངའ་གསོལ་གྱི་དུས་སྟོན་ལུ་ བྱོན་ཡོདཔ་ད་ ཁོ་གི་ཤུལ་འཛིན་པ་ཚུ་ཡང་ འབྲུག་ལུ་བྱོན་ཡོདཔ་ལས་ མཇུག་ར་གནམ་ལོ་ ༡༩༤༧ ལུ་ཨེ་ཇེ་ཧོབ་ཀིནསི་ཨིནམ་ད་ ཁོ་གིས་འབྲུག་རྒྱལཔོ་མཆོག་ལུ་གཟེངས་བསྟོད་ཀྱིས་རྟགས་མ་ རྒྱ་གར་རྒྱལ་ཁབ་གྱི་དམག་སྡེའི་འགོ་དཔོན་དཔའ་བོ་</big>(Knight Commander of the Indian Empire) <big>ཕུལ་བ་བྱོན་ཡོདཔ་ཨིན་མས། སྤ་རོ་དཔོན་སློབ་ཚེ་རིང་དཔལ་འབྱོར་ ༼ཕྱི་རྒྱལ་དཔོན་ཁག་ཚུ་གི་དོན་ལུ་ ཨྱོན་དཔལ་རི་ཕོ་བྲང་བཞེངས་གནང་མི་༽ གིས་འབྲུག་རྒྱལ་ཁབ་དང་ཕྱི་རྒྱལ་གྱི་མཐུན་འབྲེལ་ འགོ་འདྲེན་འཐབ་ནི་ལུ་ལྷན་ཐབས་སྦོམ་བྱུང་ཡོདཔ་ཨིན་མས། དེ་ཡང་ ཕྱི་རྒྱལ་དཔོན་ཁག་ཚུ་འབྲུག་ལུ་སྤ་རོ་ལས་བརྒྱུད་དེ་ འོང་དོ་ཡོདཔ་ད་ ཁོ་གི་ལཱ་འགན་ཡང་བསུ་ལེན་དང་ མགྲོན་སྐྱོང་འབད་ནི་ཚུ་ཨིན་མས། འབྲུག་རྒྱལཔོ་འཇིགས་མེད་དབང་ཕྱུག་གིས་ རྒྱལ་སྲིད་སྐྱོང་གནང་པའི་སྐབས་ རྒྱ་གར་རྒྱལ་ཁབ་ནང་གཟིགས་སྐོར་ ཚར་གཉིས་ལས་མ་གནང་པས། དེ་ཡང་ གཟིགས་སྐོར་དང་པ་འདི་ ཁྲི་མངའ་གསོལ་བའི་ཤུལ་ལུ་ཤར་ཕྱོགས་རྫོང་ཁག་ཚུ་ནང་ ཞབས་སྐོར་གནང་པའི་སྐབས་ རྒྱ་གར་གུ་ཝཱ་ཧ་ཊི་ལུ་ཉིན་གྲངས་གཅིག་གི་རིང་ལུ་ གདན་འདྲེན་ཞུ་ཡོད་མི་ལུ་བྱོན་གནང་ནུག། གཟིགས་སྐོར་གཉིས་པ་འདི་ སྤྱི་ལོ་ ༡༩༣༥ ལུ་ ཀཱོལ་ཀ་ཊ་ལུ་རྒྱ་གར་རྒྱལ་ཚབ་ཀྱིས་ གདན་འདྲེན་ཞུ་མི་ནང་བྱོན་ཡོདཔ་ཨིན་མས། དེ་སྐབས་ རྒྱལ་བཙུན་དང་རྒྱལ་སྲས་ དེ་ལས་ དཔོན་གཡོག་མང་རབས་ཅིག་གིས་ ཕྱག་ཞུ་སྦེ་བྱོན་ཡོདཔ་ད་ གོང་གཟིམ་བསོད་ནམས་སྟོབས་རྒྱས་རྡོ་རྗེ་དང་ ཁོ་གི་སྐུ་འཁོར་ཚུ་ཡང་ ཕྱག་ཞུ་སྟེ་བྱོན་ཡོདཔ་ཨིན་མས། གཟིགས་སྐོར་ལས་ལོག་བྱོན་པའི་སྐབས་ རྡོ་རྗེ་གདན་གནས་སྐོར་གནང་ཐོག་ སྒང་སྟོག་ལས་སྦེ་ཧཱ་ཆུམ་སྦིས་ལས་བརྒྱུད་དེ་ལོགས་རྒྱལ་ཁབ་ནང་བྱོན་གནང་ནུག། གཟིགས་སྐོར་སྐབས་ མི་དབང་མཆོག་གིས་ གོང་འཕེལ་ལས་སྣའི་གྲོགས་རམ་དང་ སྤྱི་ལོ་ ༡༨༦༤-༡༨༦༥ གི་ ཌུ་ཝར་དམག་འཁྲུག་རྐྱབ་པའི་སྐབས་ འབྲུག་གི་ས་གནས་བདེ་ཝ་ཐང་བཱིར་ཊིཤ་གཞུང་གིས་མངའ་འོག་ལུ་ཚུད་ཡོད་མི་འདི་ ལོག་གནང་དགོ་པའི་ཞུ་བ་མཛད་ཡོདཔ་ཨིན་མས། ཨིན་རུང་བཱིར་ཊིཤ་གཞུང་གིས་ ངོས་ལེན་མ་འབད་བར་ཡོད་མི་ལུ་ མི་དབང་མངའ་བདག་མཆོག་ཐུགས་ཕམ་ཡོདཔ་ཨིན་རུང་ འབྲུག་རྒྱལཔོ་མཆོག་གིས་ བིར་ཊིཤ་གཞུང་དང་མཐུན་འབྲེལ་འཕྲོ་མཐུད་མཛད་ཡོདཔ་མས། དེ་བསྒང་གོང་གཟིམ་གྱིས་ རྒྱལ་སྤྱི་གནས་ཚད་ནང་ རང་བཙན་སྲུང་སྐྱོབ་ཀྱི་གནས་སྟངས་ལཱ་ཁག་ཡོད་ལུགས་ཀྱི་སྐོར་ལས་མཁྱེན་དོ་ཡོདཔ་མས། བཱིརི་ཊིཤ་གཞུང་ཡང་ འབྲུག་གི་བིར་ཊིཤ་གཞུང་ལུ་ཕན་ཚུན་ ལེགས་ཤོམ་ཅིག་སྦེ་ཧ་གོ་མ་ཚུགས་པར་ལུས་ནུག། དེ་ཡང་ བཱིརི་ཊིཤ་གཞུང་གིས་འབྲུག་གི་གོང་འཕེལ་ལས་སྣ་ལུ་ རྒྱབ་སྐྱོར་འབད་ནི་ལུ་ ཁེ་ཕན་ཅིག་མ་མཐོང་པས། བཱིརི་ཊིཤ་གཞུང་གིས་ ཁོང་རའི་ཁེ་ཕན་ལྟར་ འབྲུག་རྒྱལ་ཁབ་འདི་ བཱིརི་ཊིཤ་གཞུང་གི་དམིགས་པ་ལས་སོ་སོ་ཨིནམ་སྦེ་ར་ཆ་བཞག་བསྐྱེད་ནུག། རང་བཙན་ཡོད་པའི་འབྲུག་རྒྱལཁབ་འདི་ ཆིངས་ཡིག་འདི་གི་ཕྱོགས་ལས་ཕོགས་ལམ་ཡང་རིན་གོང་ཆུང་བའི་ཉེན་ཁ་ཡོད་པའི་ བཱིརི་ཊིཤ་དང་རྒྱ་གར་གྱི་བྱང་ཤར་ས་གོ་རྒྱ་ཚད་ ༢༥༠ འབད་མི་འཐོབ་ཡོདཔ་མས། བདེ་ཝ་ཐང་གི་སྐོར་ལས་ལོ་རྒྱུས་ཐོནམ་ད་ འདི་ལུ་གསལ་ཏོག་ཏོ་ཅིག་མེད་པར་ ཐད་ཀར་འདི་ཁོང་རྒྱལ་ཁབ་མིང་གཏམ་གྱི་དོན་ལུ་བཞག་ཡོདཔ་མས། གོང་ལུ་བཀོད་དོ་བཟུམ་ ཕྱི་གཞུང་གི་དམག་གི་རྒྱལ་ཁ་ངོ་ཚ་སི་སི་སྦེ་ཕམ་ཡོད་མི་ལས་ ཁོང་གི་སྟོབས་གཉིས་འབྲུག་པའི་ལག་པར་དེ་བསྒང་ སྤྱི་ལོ་ ༡༨༦༤-༡༨༦༥ གི་དམག་གི་སྐབས་ཐོབ་ཡོདཔ་མས། དེ་བསྒང་རྒྱ་གར་གཞུང་གིས་ རང་དབང་རང་བཙན་འཐོབ་ནི་གི་དུམ་ཁར་དཔག་ཡོདཔ་ལས། ཞོར་ཁ་ འབྲུགཔ་ཚུ་ལུ་ཙིགཔ་ཟ་སྡོད་ནུག། དེ་ཡང་ གསརཔ་ཨིན་པའི་ རྒྱ་གར་མི་སེར་རྒྱལ་ཁབ་ཀྱི་ སྲིད་བྱུས་ཚུ་ཁྱིམ་ཚང་རྒྱལ་ཁབ་ལས་ དཔྱེ་མི་བལྟ་ག་ཟེར་ཐེ་ཚོམ་ཆགས་ནུག། འབྲུག་རྒྱལ་པོ་འཇིགས་མེད་དབང་ཕྱུག་གིས་ བཱིརི་ཊིཤ་ལྷན་སྡེའི་དོན་གཅོད་སྐུ་ཚབ་ལུ་ དཀའ་ངལ་ཚུ་བསལ་ནིའི་དཔའ་ཅམ་ནུག། དེ་བསྒང་གསུངས་ཡོད་མི་ནང་ འབྲུག་རྒྱལ་ཁབ་འདི་ བཱིརི་ཊིཤ་གི་འོག་ལུ་ཚར་གཅིག་ཡང་མ་ཚུདཔ་ལས་ རང་བཙན་བསྲུང་ནི་ཐད་ཀར་གྱི་འགན་ཁུར་ཨིན་ཟེར་གསུངས་ནུག། འདི་ལུ་ ཕྱི་གཞུང་གིས་གསལ་ཏོག་ཏོ་ཅིག་སླབ་མ་བཏུབ་ལས་ ག་ར་ རྟག་པ་མེད་པར་སྡོད་པའི་བར་ རྒྱ་གར་གཞུང་གི་ གནས་སྐབས་ཀྱི་བློན་ཆེན་པཎ་ཌིད་ཇ་ཝ་ཧཱར་ལཱལ་ཎེ་རུ་གིས་ མཚམས་འཇོག་སྦེ་བཞག་ཡོདཔ་ལས་ འབྲུག་རྒྱལ་པོ་ལུ་མཐུན་འབྲེལ་གྱི་འཕྲིན་ཡིག་ཅིག་ སྤྱི་ལོ་ ༡༩༤༦ ལུ་བསྐྱེལ་གནང་ནུག། དེ་གི་ཤུལ་ལས་ རྒྱ་གཞུང་གིས་ འབྲུག་རྒྱལ་ཁབ་འདི་ ཨེ་ཤི་ཡཱན་མཐུན་འབྲེལ་གྲོས་བསྟུན་ནང་ ནཱིའུ་ཌེལ་ལི་ལུ་གདན་འདྲེན་ཞུ་ནུག། སྤྱི་ལོ་ ༡༩༤༧ སྤྱི་ཟླ་བརྒྱད་པའི་ སྤྱི་ཚེས་ ༡༥ ལུ་ རྒྱ་གར་གཞུང་རང་དབང་ཐོབ་ཡོདཔ་ལས་ འབྲུག་དང་རྒྱ་གར་གྱི་བར་ན་ ཆིངས་ཡིག་གསརཔ་གུར་ བདེ་སྒྲིག་གི་ལཱ་ཚུ་ལྷག་བསམ་གྱི་སྒོ་ལས་འགོ་བཙུགས་ནུག། ཧེ་མའི་ལོ་ ༼༡༩༤༦༽ ལུ་ གོང་གཟིམ་གྱིས་གཙོས་པའི་ འབྲུག་པའི་འཐུས་མི་སྡེ་ཚན་ ནཱིའུ་ཌེལ་ལི་ལུ་གནས་ཡུན་ཚུ་ བདེ་སྒྲིག་འབད་བར་འོང་ཡོདཔ་མས། སྤྱི་ལོ་ ༡༩༤༩ སྤྱི་ཟླ་བརྒྱད་པའི་སྤྱི་ཚེས་ ༨ ལུ་ རྒྱ་འབྲུག་གཉིས་ཀྱི་ཆིངས་ཡིག་ དེ་བསྒང་ སྤྱི་ལོ་ ༡༩༡༠ ལུ་མཚན་རྟགས་བཀོད་མི་འདི་བརྗེ་སོར་འབད་དེ་ ཆིངས་ཡིག་གསརཔ་འདི་ དར་རྒྱས་གླིང་ལུ་སྦེ་མཚན་རྟགས་བཀོད་གནང་ནུག། འདི་ནང་ རྒྱལ་ཁབ་གཉིས་ཀྱི་བར་ ཨེང་གོལོ་བཱུ་ཨཏ་ཊན་ཆིངས་ཡིག་གི་ཤུལ་བཞག་ལུ་གཞི་བཞག་སྟེ་ མཐུན་ལམ་དམ་ཟབ་བཞག་ནི་ཚུ་ཨིན་མས། རྒྱ་གར་མི་སེར་གཞུང་གིས་ འབྲུག་ནང་འཁོད་ཀྱི་ལས་དོན་ཚུ་ལུ་ བར་འཛུལ་མི་འབད་དོ་ཡོདཔ་དང་ ཕྱི་འབྲེལ་མཐུན་ལམ་ཐད་ཁར་ ལམ་སྟོན་ཚུ་རྒྱ་གཞུང་གིས་འབད་ནི་ཨིན་པས། བདེ་ཝ་ཐང་གི་ས་རྒྱ་ གྲུ་བཞི་ཀི་ལོ་མི་ཊར་ ༣༢ འབད་མི་འདི་ བཱིརི་ཊིཤ་གིས་ མི་ལོ་ ༨༠ དེ་ཅིག་བདག་དབང་འབད་ཡོད་མི་འདི་ རྒྱ་གཞུང་གིས་འབྲུག་པའི་དབང་ཚད་ལུ་ལོག་སྤྲོད་ཡོདཔ་ལས་ འདི་ལུ་ཕྲག་དོག་ལངས་ཡོདཔ་མས། ཆིངས་ཡིག་འདི་ སེམས་གཙོ་བོར་བཏོན་པའི་སྙིང་སྟོབས་ཀྱི་བརྡ་མཚོན་ རྒྱ་གར་གཞུང་གསརཔ་ནང་གནས་བཞིན་པ་ཨིན་ཟེར་ཨིན་མས། འདི་ ལྷོ་ཨེ་ཤི་ཡའི་མཉམ་འབྲེལ་གྱི་མཁས་རིག་གི་མངོན་གསལ་ཅིག་ཨིན་མས། དེ་མ་ཚད་ དེ་གིས་ རྒྱ་འབྲུག་གཉིས་ཀྱི་མཐུན་ལམ་འདི་སྒྲིང་སྒྲི་དང་ ལྷག་པར་ མ་འོངས་འབྲེལ་བ་ཟུང་འབྲེལ་ལོ་ངོ་བཅུ་ཕྲག་ལས་བཅད་འབྱུང་ཐབས་ལུ་ཨིན་མས།</big>
-
+<big>༉ འབྲུག་གི་ཕྱི་འབྲེལ་སྲིད་བྱུས་ཀྱི་ལམ་ལུགས་འགོ་ཐོག་དང་པ་ མཐོང་རྒྱ་མྱོང་བཅུག་པའི་འབྲུག་གི་དབུ་ཁྲིད་ཚུ་གི་གྲས་ལས་ འབྲུག་རྒྱལ་པོ་འཇིགས་མེད་དབང་ཕྱུག་མཆོག་གིས་མཛད་གནང་ནུག། དེ་ཡང་ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ་གྱིས་ དུས་རབས་༡༧ པའི་ནང་འབྲུག་རྒྱལ་ཁབ་འདི་ རང་དབང་རང་བཙན་ཅན་ཅིག་སྦེ་བཟོ་གནང་ཞིནམ་ལས་ ཕྱི་རྒྱལ་མཐུན་འབྲེལ་གྱི་ལམ་ལུགས་འདི་ གཟུར་གནས་ཀྱི་སྲིད་བྱུས་ཅིག་སྦེ་ར་ལུས་ནུག། འབྲུག་རྒྱལ་གཉིས་པའི་རྒྱལ་སྲིད་སྐབས་ འཛམ་གླིང་ངེས་མེད་གནས་སྟངས་ཅན་ཅིག་ལུ་གྱུར་སྡོད་ཡོད་རུང་ འབྲུག་རྒྱལཔོ་འཇིགས་མེད་དབང་ཕྱུག་མཆོག་གིས་ སྔར་སྲོལ་-གཟུར་གནས་ཀྱི་སྲིད་བྱུས་ཐོག་ འཛམ་གླིང་དཔལ་འབྱོར་མར་ཉམས་ ༼༡༩༣༠༽ དང་འཛམ་གླིང་དམག་ཆེན་ ༢ པའི་ ༼༡༩༣༩ - ༡༩༤༥༽ གནས་སྟངས་ཚུ་ལས་ གནོད་སྐྱོན་ག་ནི་ཡང་མེད་པར་རྒྱལ་བརྒྱུད་སྐྱོངས་གནང་ནུག། ཨིན་རུང་ཁྱིམ་ཚང་རྒྱ་གར་རྒྱལ་ཁབ་ཀྱི་རང་བཙན་དང་ རྒྱ་ནག་རྒྱལ་ཁབ་ཀྱི་སྟོབས་ཤུགས་ཡར་འཕར་འགྱོ་མི་གིས་ འབྲུག་རྒྱལ་ཁབ་གྱི་རང་བཙན་དང་ཞི་བདེ་ལུ་རྟག་པ་མེད་པའི་ཉེན་འཚུབས་ཚུ་ ཕོག་ཡོདཔ་ཨིན་མས། སྤུ་ན་ཁའི་ཆིངས་ཡིག་ ༡༩༡༠ ཅན་མ་གིས་ འབྲུག་ལུ་བཱིརི་ཊིཤ་གཞུང་གི་སྐུ་ཚབ་ཡིག་ཚང་གཞི་བཙུགས་ གནང་ནིའི་གྲོས་མཐུན་མ་བཀོད་པས། བཱིརི་ཊིཤ་གཞུང་དང་ཟུང་ཕྱོགས་མཐུན་འབྲེལ་ཡང་སྒང་སྟོག་ལུ་གཞི་བཙུགས་འབད་ཡོད་པའི བཱིརི་ཊིཤ་གཞུང་གི་སྲིད་དོན་འགོ་དཔོན་གྱི་འགོ་འདྲེན་ཐོག་མཛད་གནང་ནུག། གནམ་ལོ་ ༡༩༢༧ ལུ་ བཱིརི་ཊིཤ་གཞུང་གི་སྲིད་དོན་འགོ་དཔོན་ཨེཕ་ཨེམ་བེ་ལི་གིས་ འབྲུག་རྒྱལ་གཉིས་པའི་གསེར་ཁྲི་མངའ་གསོལ་གྱི་དུས་སྟོན་ལུ་ བྱོན་ཡོདཔ་ད་ ཁོ་གི་ཤུལ་འཛིན་པ་ཚུ་ཡང་ འབྲུག་ལུ་བྱོན་ཡོདཔ་ལས་ མཇུག་ར་གནམ་ལོ་ ༡༩༤༧ ལུ་ཨེ་ཇེ་ཧོབ་ཀིནསི་ཨིནམ་ད་ ཁོ་གིས་འབྲུག་རྒྱལཔོ་མཆོག་ལུ་གཟེངས་བསྟོད་ཀྱིས་རྟགས་མ་ རྒྱ་གར་རྒྱལ་ཁབ་གྱི་དམག་སྡེའི་འགོ་དཔོན་དཔའ་བོ་</big>(Knight Commander of the Indian Empire) <big>ཕུལ་བ་བྱོན་ཡོདཔ་ཨིན་མས། སྤ་རོ་དཔོན་སློབ་ཚེ་རིང་དཔལ་འབྱོར་ ༼ཕྱི་རྒྱལ་དཔོན་ཁག་ཚུ་གི་དོན་ལུ་ ཨྱོན་དཔལ་རི་ཕོ་བྲང་བཞེངས་གནང་མི་༽ གིས་འབྲུག་རྒྱལ་ཁབ་དང་ཕྱི་རྒྱལ་གྱི་མཐུན་འབྲེལ་ འགོ་འདྲེན་འཐབ་ནི་ལུ་ལྷན་ཐབས་སྦོམ་བྱུང་ཡོདཔ་ཨིན་མས། དེ་ཡང་ ཕྱི་རྒྱལ་དཔོན་ཁག་ཚུ་འབྲུག་ལུ་སྤ་རོ་ལས་བརྒྱུད་དེ་ འོང་དོ་ཡོདཔ་ད་ ཁོ་གི་ལཱ་འགན་ཡང་བསུ་ལེན་དང་ མགྲོན་སྐྱོང་འབད་ནི་ཚུ་ཨིན་མས། འབྲུག་རྒྱལཔོ་འཇིགས་མེད་དབང་ཕྱུག་གིས་ རྒྱལ་སྲིད་སྐྱོང་གནང་པའི་སྐབས་ རྒྱ་གར་རྒྱལ་ཁབ་ནང་གཟིགས་སྐོར་ ཚར་གཉིས་ལས་མ་གནང་པས། དེ་ཡང་ གཟིགས་སྐོར་དང་པ་འདི་ ཁྲི་མངའ་གསོལ་བའི་ཤུལ་ལུ་ཤར་ཕྱོགས་རྫོང་ཁག་ཚུ་ནང་ ཞབས་སྐོར་གནང་པའི་སྐབས་ རྒྱ་གར་གུ་ཝཱ་ཧ་ཊི་ལུ་ཉིན་གྲངས་གཅིག་གི་རིང་ལུ་ གདན་འདྲེན་ཞུ་ཡོད་མི་ལུ་བྱོན་གནང་ནུག། གཟིགས་སྐོར་གཉིས་པ་འདི་ སྤྱི་ལོ་ ༡༩༣༥ ལུ་ ཀཱོལ་ཀ་ཊ་ལུ་རྒྱ་གར་རྒྱལ་ཚབ་ཀྱིས་ གདན་འདྲེན་ཞུ་མི་ནང་བྱོན་ཡོདཔ་ཨིན་མས། དེ་སྐབས་ རྒྱལ་བཙུན་དང་རྒྱལ་སྲས་ དེ་ལས་ དཔོན་གཡོག་མང་རབས་ཅིག་གིས་ ཕྱག་ཞུ་སྦེ་བྱོན་ཡོདཔ་ད་ གོང་གཟིམ་བསོད་ནམས་སྟོབས་རྒྱས་རྡོ་རྗེ་དང་ ཁོ་གི་སྐུ་འཁོར་ཚུ་ཡང་ ཕྱག་ཞུ་སྟེ་བྱོན་ཡོདཔ་ཨིན་མས། གཟིགས་སྐོར་ལས་ལོག་བྱོན་པའི་སྐབས་ རྡོ་རྗེ་གདན་གནས་སྐོར་གནང་ཐོག་ སྒང་སྟོག་ལས་སྦེ་ཧཱ་ཆུམ་སྦིས་ལས་བརྒྱུད་དེ་ལོགས་རྒྱལ་ཁབ་ནང་བྱོན་གནང་ནུག། གཟིགས་སྐོར་སྐབས་ མི་དབང་མཆོག་གིས་ གོང་འཕེལ་ལས་སྣའི་གྲོགས་རམ་དང་ སྤྱི་ལོ་ ༡༨༦༤-༡༨༦༥ གི་ ཌུ་ཝར་དམག་འཁྲུག་རྐྱབ་པའི་སྐབས་ འབྲུག་གི་ས་གནས་བདེ་ཝ་ཐང་བཱིར་ཊིཤ་གཞུང་གིས་མངའ་འོག་ལུ་ཚུད་ཡོད་མི་འདི་ ལོག་གནང་དགོ་པའི་ཞུ་བ་མཛད་ཡོདཔ་ཨིན་མས། ཨིན་རུང་བཱིར་ཊིཤ་གཞུང་གིས་ ངོས་ལེན་མ་འབད་བར་ཡོད་མི་ལུ་ མི་དབང་མངའ་བདག་མཆོག་ཐུགས་ཕམ་ཡོདཔ་ཨིན་རུང་ འབྲུག་རྒྱལཔོ་མཆོག་གིས་ བིར་ཊིཤ་གཞུང་དང་མཐུན་འབྲེལ་འཕྲོ་མཐུད་མཛད་ཡོདཔ་མས། དེ་བསྒང་གོང་གཟིམ་གྱིས་ རྒྱལ་སྤྱི་གནས་ཚད་ནང་ རང་བཙན་སྲུང་སྐྱོབ་ཀྱི་གནས་སྟངས་ལཱ་ཁག་ཡོད་ལུགས་ཀྱི་སྐོར་ལས་མཁྱེན་དོ་ཡོདཔ་མས།<br>
+བཱིརི་ཊིཤ་གཞུང་ཡང་ འབྲུག་གི་བིར་ཊིཤ་གཞུང་ལུ་ཕན་ཚུན་ ལེགས་ཤོམ་ཅིག་སྦེ་ཧ་གོ་མ་ཚུགས་པར་ལུས་ནུག། དེ་ཡང་ བཱིརི་ཊིཤ་གཞུང་གིས་འབྲུག་གི་གོང་འཕེལ་ལས་སྣ་ལུ་ རྒྱབ་སྐྱོར་འབད་ནི་ལུ་ ཁེ་ཕན་ཅིག་མ་མཐོང་པས། བཱིརི་ཊིཤ་གཞུང་གིས་ ཁོང་རའི་ཁེ་ཕན་ལྟར་ འབྲུག་རྒྱལ་ཁབ་འདི་ བཱིརི་ཊིཤ་གཞུང་གི་དམིགས་པ་ལས་སོ་སོ་ཨིནམ་སྦེ་ར་ཆ་བཞག་བསྐྱེད་ནུག། རང་བཙན་ཡོད་པའི་འབྲུག་རྒྱལཁབ་འདི་ ཆིངས་ཡིག་འདི་གི་ཕྱོགས་ལས་ཕོགས་ལམ་ཡང་རིན་གོང་ཆུང་བའི་ཉེན་ཁ་ཡོད་པའི་ བཱིརི་ཊིཤ་དང་རྒྱ་གར་གྱི་བྱང་ཤར་ས་གོ་རྒྱ་ཚད་ ༢༥༠ འབད་མི་འཐོབ་ཡོདཔ་མས། བདེ་ཝ་ཐང་གི་སྐོར་ལས་ལོ་རྒྱུས་ཐོནམ་ད་ འདི་ལུ་གསལ་ཏོག་ཏོ་ཅིག་མེད་པར་ ཐད་ཀར་འདི་ཁོང་རྒྱལ་ཁབ་མིང་གཏམ་གྱི་དོན་ལུ་བཞག་ཡོདཔ་མས། གོང་ལུ་བཀོད་དོ་བཟུམ་ ཕྱི་གཞུང་གི་དམག་གི་རྒྱལ་ཁ་ངོ་ཚ་སི་སི་སྦེ་ཕམ་ཡོད་མི་ལས་ ཁོང་གི་སྟོབས་གཉིས་འབྲུག་པའི་ལག་པར་དེ་བསྒང་ སྤྱི་ལོ་ ༡༨༦༤-༡༨༦༥ གི་དམག་གི་སྐབས་ཐོབ་ཡོདཔ་མས། དེ་བསྒང་རྒྱ་གར་གཞུང་གིས་ རང་དབང་རང་བཙན་འཐོབ་ནི་གི་དུམ་ཁར་དཔག་ཡོདཔ་ལས། ཞོར་ཁ་ འབྲུགཔ་ཚུ་ལུ་ཙིགཔ་ཟ་སྡོད་ནུག། དེ་ཡང་ གསརཔ་ཨིན་པའི་ རྒྱ་གར་མི་སེར་རྒྱལ་ཁབ་ཀྱི་ སྲིད་བྱུས་ཚུ་ཁྱིམ་ཚང་རྒྱལ་ཁབ་ལས་ དཔྱེ་མི་བལྟ་ག་ཟེར་ཐེ་ཚོམ་ཆགས་ནུག། འབྲུག་རྒྱལ་པོ་འཇིགས་མེད་དབང་ཕྱུག་གིས་ བཱིརི་ཊིཤ་ལྷན་སྡེའི་དོན་གཅོད་སྐུ་ཚབ་ལུ་ དཀའ་ངལ་ཚུ་བསལ་ནིའི་དཔའ་ཅམ་ནུག། དེ་བསྒང་གསུངས་ཡོད་མི་ནང་ འབྲུག་རྒྱལ་ཁབ་འདི་ བཱིརི་ཊིཤ་གི་འོག་ལུ་ཚར་གཅིག་ཡང་མ་ཚུདཔ་ལས་ རང་བཙན་བསྲུང་ནི་ཐད་ཀར་གྱི་འགན་ཁུར་ཨིན་ཟེར་གསུངས་ནུག། འདི་ལུ་ ཕྱི་གཞུང་གིས་གསལ་ཏོག་ཏོ་ཅིག་སླབ་མ་བཏུབ་ལས་ ག་ར་ རྟག་པ་མེད་པར་སྡོད་པའི་བར་ རྒྱ་གར་གཞུང་གི་ གནས་སྐབས་ཀྱི་བློན་ཆེན་པཎ་ཌིད་ཇ་ཝ་ཧཱར་ལཱལ་ཎེ་རུ་གིས་ མཚམས་འཇོག་སྦེ་བཞག་ཡོདཔ་ལས་ འབྲུག་རྒྱལ་པོ་ལུ་མཐུན་འབྲེལ་གྱི་འཕྲིན་ཡིག་ཅིག་ སྤྱི་ལོ་ ༡༩༤༦ ལུ་བསྐྱེལ་གནང་ནུག། དེ་གི་ཤུལ་ལས་ རྒྱ་གཞུང་གིས་ འབྲུག་རྒྱལ་ཁབ་འདི་ ཨེ་ཤི་ཡཱན་མཐུན་འབྲེལ་གྲོས་བསྟུན་ནང་ ནཱིའུ་ཌེལ་ལི་ལུ་གདན་འདྲེན་ཞུ་ནུག། སྤྱི་ལོ་ ༡༩༤༧ སྤྱི་ཟླ་བརྒྱད་པའི་ སྤྱི་ཚེས་ ༡༥ ལུ་ རྒྱ་གར་གཞུང་རང་དབང་ཐོབ་ཡོདཔ་ལས་ འབྲུག་དང་རྒྱ་གར་གྱི་བར་ན་ ཆིངས་ཡིག་གསརཔ་གུར་ བདེ་སྒྲིག་གི་ལཱ་ཚུ་ལྷག་བསམ་གྱི་སྒོ་ལས་འགོ་བཙུགས་ནུག། ཧེ་མའི་ལོ་ ༼༡༩༤༦༽ ལུ་ གོང་གཟིམ་གྱིས་གཙོས་པའི་ འབྲུག་པའི་འཐུས་མི་སྡེ་ཚན་ ནཱིའུ་ཌེལ་ལི་ལུ་གནས་ཡུན་ཚུ་ བདེ་སྒྲིག་འབད་བར་འོང་ཡོདཔ་མས། སྤྱི་ལོ་ ༡༩༤༩ སྤྱི་ཟླ་བརྒྱད་པའི་སྤྱི་ཚེས་ ༨ ལུ་ རྒྱ་འབྲུག་གཉིས་ཀྱི་ཆིངས་ཡིག་ དེ་བསྒང་ སྤྱི་ལོ་ ༡༩༡༠ ལུ་མཚན་རྟགས་བཀོད་མི་འདི་བརྗེ་སོར་འབད་དེ་ ཆིངས་ཡིག་གསརཔ་འདི་ དར་རྒྱས་གླིང་ལུ་སྦེ་མཚན་རྟགས་བཀོད་གནང་ནུག། འདི་ནང་ རྒྱལ་ཁབ་གཉིས་ཀྱི་བར་ ཨེང་གོལོ་བཱུ་ཨཏ་ཊན་ཆིངས་ཡིག་གི་ཤུལ་བཞག་ལུ་གཞི་བཞག་སྟེ་ མཐུན་ལམ་དམ་ཟབ་བཞག་ནི་ཚུ་ཨིན་མས། རྒྱ་གར་མི་སེར་གཞུང་གིས་ འབྲུག་ནང་འཁོད་ཀྱི་ལས་དོན་ཚུ་ལུ་ བར་འཛུལ་མི་འབད་དོ་ཡོདཔ་དང་ ཕྱི་འབྲེལ་མཐུན་ལམ་ཐད་ཁར་ ལམ་སྟོན་ཚུ་རྒྱ་གཞུང་གིས་འབད་ནི་ཨིན་པས། བདེ་ཝ་ཐང་གི་ས་རྒྱ་ གྲུ་བཞི་ཀི་ལོ་མི་ཊར་ ༣༢ འབད་མི་འདི་ བཱིརི་ཊིཤ་གིས་ མི་ལོ་ ༨༠ དེ་ཅིག་བདག་དབང་འབད་ཡོད་མི་འདི་ རྒྱ་གཞུང་གིས་འབྲུག་པའི་དབང་ཚད་ལུ་ལོག་སྤྲོད་ཡོདཔ་ལས་ འདི་ལུ་ཕྲག་དོག་ལངས་ཡོདཔ་མས། ཆིངས་ཡིག་འདི་ སེམས་གཙོ་བོར་བཏོན་པའི་སྙིང་སྟོབས་ཀྱི་བརྡ་མཚོན་ རྒྱ་གར་གཞུང་གསརཔ་ནང་གནས་བཞིན་པ་ཨིན་ཟེར་ཨིན་མས། འདི་ ལྷོ་ཨེ་ཤི་ཡའི་མཉམ་འབྲེལ་གྱི་མཁས་རིག་གི་མངོན་གསལ་ཅིག་ཨིན་མས། དེ་མ་ཚད་ དེ་གིས་ རྒྱ་འབྲུག་གཉིས་ཀྱི་མཐུན་ལམ་འདི་སྒྲིང་སྒྲི་དང་ ལྷག་པར་ མ་འོངས་འབྲེལ་བ་ཟུང་འབྲེལ་ལོ་ངོ་བཅུ་ཕྲག་ལས་བཅད་འབྱུང་ཐབས་ལུ་ཨིན་མས།</big>
 
 === འཛམ་གླིང་སྤྱི་ཚོགས་ རྒྱལ་སྤྱི་ཨ་ལུའི་གློ་བུར་མ་དངུལ། ༼ཡུ་ནི་སེཕ།༽ ===
 <big>༉ ཡུ་ནི་སེཕ་ ཡང་ན་ འཛམ་གླིང་སྤྱི་ཚོགས་རྒྱལ་སྤྱི་ཨ་ལུའི་གློ་བུར་མ་དངུལ་ཟེར་མི་འདི་ འཛམ་གླིང་སྤྱི་ཚོགས་ཀྱི་ལས་སྡེ་ཅིག་ཨིན། དེ་གིས་ ཨ་ལུ་ཚུ་ལུ་ མི་ཚེ་དང་འབྲེལ་བའི་གྲོགས་རམ་དང་ གོང་འཕེལ་གྱི་རྒྱབ་སྐྱོར་ཚུ་བྱིནམ་ཨིན། དེ་འབདཝ་ལས་ ལས་སྡེ་འདི་ ག་ཏེ་ལུ་ཡང་ཁྱབ་སྟེ་ཡོདཔ་མ་ཚད་ ཀུན་གྱིས་ངོས་འཛིན་འབད་ཚུགས་པའི་མི་སྡེའི་སྐྱིད་སྡུག་ལྟ་མི་ལས་ཁུངས་ངོ་མ་ཅིག་ཨིན། (ལི་ལི་དབང་ཕྱུག། ༢༠༠༨ ཤོག་གྲངས་ ༡༨༢།).<br>
@@ -18,9 +18,6 @@
 འཛམ་གླིང་གསོ་བའི་ལས་ཚོགས་ལུ་ ལུང་ཕྱོགས་ཡིག་ཚང་ ༦ ཡོད། དེ་ཡང་ ཁག་ཆེ་བའི་ས་གནས་ཚུ་ནང་ དམིགས་བསལ་གྱི་ཞབས་ཏོག་སྤྲོད་ནིའི་དོན་ལུ་ གཞི་བཙུགས་འབད་ཡོད། གསོ་བའི་ལས་སྡེ་གིས་ འཛམ་གླིང་སྤྱི་ཚོགས་ཀྱི་ལས་ཁུངས་གཞན་མི་ཚུ་དང་ གཞན་ཡང་ གཞུང་འབྲེལ་དང་གཞུང་མིན་གྱི་ལས་ཁུངས་ཁག་མ་འདྲཝ་ཚུ་དང་གཅིག་ཁར་ མཉམ་འབྲེལ་གྱི་ཐོག་ལས་ལཱ་ཚུ་འབདཝ་ཨིན། གསོ་བའི་སྨན་པ་དང་མཁས་མཆོག་ ༨༠༠༠ ལྷག་ཙམ་ཅིག་གིས་ ཇི་ནི་བཱ་ལུ་ཡོད་པའི་ཡིག་ཚང་ལྟེ་བ་དང་ འཐུས་མི་རྒྱལ་ཁབ་ ༡༤༧ གྱི་ནང་ཡོད་པའི་ཡིག་ཚང་ཚུ་ནང་ ཕྱག་ལཱ་གནངམ་ཨིན། གསོ་བའི་ལས་ཚོགས་ཀྱི་མ་དངུལ་འབྱུང་སའི་གཞི་གཉིས་ཡོད་ས་ལས་ དང་པ་འདི་ འཐུས་མི་རྒྱལ་ཁབ་རེ་རེ་བཞིན་དུ་ལས་གནས་རྩིས་བཏོན་ཐོག་ལས་ སྤྲོད་པའི་མ་དངུལ་དང་། གཉིས་པ་ ཁས་བླངས་ཀྱི་ཐོག་ལས་ཞལ་འདེབས་བྱིན་མི་གཉིས་ཨིན།<br>
 དུས་ཀྱི་འགྱུར་བ་དང་བསྟུན་ཏེ་འབྲུག་རྒྱལ་ཁབ་ཡང་ སྤྱི་ལོ་ ༡༩༦༠ ལས་ཚུར་ རྒྱལ་ཁབ་ནང་ཡར་རྒྱས་ཀྱི་གཞི་འགྱམ་བཙུགས་ཏེ་ གསོ་བའི་གནས་སྟངས་ཡང་ རིམ་གྱིས་སྦེ་ཡར་རྒྱས་གཏང་ནི་གི་དུས་ལུ་བབས་ནུག། དེ་ལས་ འབྲུག་རྒྱལ་ཁབ་ཡང་ འཛམ་གླིང་གསོ་བའི་ལས་ཚོགས་ཀྱི་འཐུས་མི་སྦེ་ སྤྱི་ལོ་ ༡༩༨༢ སྤྱི་ཟླ་ ༣ པའི་ཚེས་ ༨ ལུ་འཛུལ་ཞུགས་འབད་ཡོདཔ་ཨིན། སྤྱི་ལོ་ ༡༩༧༩ ལས་ཚུར་རྒྱལ་ཁབ་ནང་ གསོ་བའི་གནས་ཚད་ཡར་དྲག་གཏང་ཐབས་ལུ་ གཞི་རིམ་གསོ་བའི་གཅེས་སྐྱོང་ ཨཱལ་མ་ཨ་ཊ་</big> (alma ata) <big>གི་གསལ་བསྒྲགས་འདི་ལུ་གཙོ་བོར་བཟུང་ཞིནམ་ལས་ དུས་མཐུན་གསོ་བའི་ཞབས་ཏོག་སྤྲོད་ནི་ལུ་རྩ་འགེངས་ནུག། འཛམ་གླིང་གསོ་བའི་ལས་སྡེ་གིས་ འབྲུག་རྒྱལ་ཁབ་ལུ་གྲོགས་རམ་ངོ་མ་ར་ གནས་སྟངས་མ་འདྲཝ་ལྔ་ནང་འབད་དོ་ཡོདཔ་ཨིན། དེ་ཡང་ མི་སྟོབས་ཡར་རྒྱས་གཏང་ནི། གསོ་བའི་ལམ་ལུགས་སྒྲིང་སྒྲི་བཟོ་ནི། འཕྲོད་བསྟེན་གྱི་ཉེན་ཁ་མར་ཕབ་འབད་ནི། ནད་གཞི་མར་ཕབ་འབད་ནི། དེ་བཟུམ་སྦེ་ ཡུན་བརྟན་ཡར་རྒྱས་ཀྱི་དོན་ལུ་གསོ་བའི་གནས་སྟངས་ཡར་དྲག་གཏང་ནི་ཚུ་ཨིན།  འབྲུག་རྒྱལ་ཁབ་ནང་ལུ་ཡང་ འཛམ་གླིང་གསོ་བའི་ཡིག་ཚང་འདི་ སྤྱི་ལོ་ ༡༩༨༣ ལུ་ ཐིམ་ཕུག་ལུ་གཞི་བཙུགས་མཛད་ཡོདཔ་དང་ ཌོག་ཊར་ཨེམ་སའི་ཕུ་ལ་འདི་ མི་དམངས་གསོ་བའི་བདག་སྐྱོང་པ་དང་པ་གི་ལཱ་འགན་བཞེས་གནང་ནུག། ༼ལི་ལི་དབང་ཕྱུག། ༢༠༠༨། ཤོག་གྲངས་ ༡༨༣།</big>
 
-
-
-
 === འཛམ་གླིང་སྤྱི་ཚོགས། ===
 <big>༉ འཛམ་གླིང་སྤྱི་ཚོགས་འདི་མཐུན་མོང་མ་ཡིན་པའི་རྒྱལ་སྤྱི་གི་ལས་སྡེ་གཅིག་ཨིན། འཛམ་གླིང་ནང་བདེ་སྐྱིད་ཡུན་གནས་དང་མི་སྡེ་གོང་འཕེལ་གཏང་ནི་ལུ་ དམིགས་སྟེ་ རང་དབང་རང་བཙན་ཡོད་པའི་རྒྱལ་ཁབ་ཚུ་གཅིག་ཁར་བསྡོམས་ཞིནམ་ལས་ མོས་མཐུན་གྱི་ཐོག་ལུ་ལས་སྡེ་འདི་གཞི་བཙུགས་འབད་ཡོདཔ་ཨིན། འཛམ་གླིང་སྤྱི་ཚོགས་འདི་འཛམ་གླིང་གི་གཞུང་སྐྱོང་མེནམ་ལས་ ཁྲིམས་གསར་རྩམ་འབད་ནི་མེད་རུང་ སྤྱིར་བཏང་འཛམ་གླིང་ནང་བྱ་སྟབས་མ་བདེ་བའི་གནས་སྟངས་ཤརཝ་ད་ དཀའ་ངལ་ཞི་ཐབས་ལུ་སྲིད་བྱུས་ཚུ་བརྩམས་ཏེ་ཐབས་ལམ་ཚུ་སྟོནམ་ཨིན། (འཛམ་གླིང་སྤྱི་ཚོགས། ༢༠༡༠།</big> (United Nation, 2010).<br>
 <big>སྤྱི་ལོ་ ༡༩༤༥ ལུ་འཛམ་གླིང་དམག་ཆེན་ ༢ པ་མཇུག་བསྡུ་བའི་ཤུལ་ལུ་ རྒྱལ་ཁབ་མང་ཤོས་ར་ དབུལ་ཕོངས་ཀྱི་དཀའ་ངལ་གྱིས་འཛིན་ཏེ་  འཛམ་གླིང་ནང་ཞི་བདེ་གི་ས་བོན་ ལོག་བཙུགས་དགོ་པའི་རེ་བ་སྦོམ་བསྐྱེད་ནུག། དེ་ལས་ རྒྱལ་ཁབ་ ༥༡ གི་ངོ་ཚབ་ཚུ་སྤྱི་ལོ་ ༡༩༤༥ སྤྱི་ཟླ་ ༤ པའི་སྤྱི་ཚེས་ ༢༥ ལས་སྤྱི་ཟླ་ ༦ པའི་ཚེས་ ༢༦ ཚུན་ སཱན་ཕྼན་སིསི་ཀོ་ལུ་ཚོགས་པའི་ རྒྱལ་སྤྱི་གྲོས་ཚོགས་ནང་འཛོམས་ནུག། དེའི་ཤུལ་ལས་ཟླ་ངོ་ ༢ ཀྱི་རིང་ འཛམ་གླིང་སྤྱི་ཚོགས་ཀྱི་བཀའ་ཁྲིམས་བཞེངས་ཏེ་དེ་གུར་ མཚན་རྟགས་བཀོད་དེ་ཡོདཔ་ཨིན། བཀའ་ཁྲིམས་དེ་གིས་ མ་འོངས་པ་ལུ་ ཧེ་མ་བྱུང་སྟེ་ཡོད་པའི་རྐྱེན་ཚུ་ འཛེམ་བཀག་འབད་ཚུགས་པའི་ རེ་བ་སྦོམ་བསྐྱེད་ནུག། བཀའ་ཁྲིམས་བཞེངས་ཚར་ཏེ་ ཟླཝ་ ༤ གི་ཤུལ་ལས་ གཞུང་འབྲེལ་གྱི་ཐོག་ལས་འཛམ་གླིང་སྤྱི་ཚོགས་འདི་ སྤྱི་ལོ་ ༡༩༤༥ སྤྱི་ཟླ་ ༡༠ པའི་ཚེས་ ༢༥ གི་ཉིནམ་ལས་ཕྱག་ལཱ་གནང་ནི་འགོ་བཙུགས་ཡོདཔ་ཨིན། དེ་བསྒང་བཀའ་ཁྲིམས་འདི་ རྒྱ་ནག་རྒྱལ་ཁབ། ཕྼནསི། སོ་ཝི་ཡེཊི་ཡུ་ནི་ཡན། ཡུ་ནཱའི་ཊེཊི་ཀིང་ཌོམ། ཡུ་ནཱའི་ཊེཊི་ཨིསི་ཊེཊི་བཅས་ གཞན་ཡང་འཐུས་མི་ རྒྱལ་ཁབ་ལེ་ཤ་གིས་རྒྱབ་སྣོན་ཆ་འཇོག་མཛད་དེ་ཡོདཔ་ཨིན། དེ་ལས་བཟུང་སྟེ་ ད་ཚུན་མི་ལོ་ ༧༥ གི་རིང་ འཛམ་གླིང་སྤྱི་ཚོགས་ཀྱིས་ འཛམ་གླིང་ནང་ཞི་བདེ་དང་དགའ་སྐྱིད་མི་ཉམས་གོང་འཕེལ་གྱི་ཕྱག་ལཱ་མཛད་དང་མཛད་བཞིན་དུ་ཡོད། འཛམ་གླིང་སྤྱི་ཚོགས་ཡང་ དུས་ཀྱི་འགྱུར་བ་དང་འཁྲིལ་ཏེ་ རིམ་གྱིས་སྦེ་གོང་འཕེལ་འགྱོ་སྟེ་ཡོད་རུང་ མི་སྡེའི་ནང་སྟབས་མ་བདེཝ་བསལ་ནི་དང་གཅིག་གྲོགས་གཅིག་ཕན་གྱི་ལས་སྣ་བརྩམ་ནི་གི་དམིགས་ཡུལ་འདི་ འགྱུར་མེད་བརྟན་ཏོག་ཏོ་སྦེ་ར་ཡོདཔ་ཨིན།</big> (United Nation,  2010).<br>
@@ -34,17 +31,15 @@
 
 === ལྷོ་ཨེ་ཤི་ཡ་ལུང་ཕྱོགས་མཐུན་འབྲེལ་ཆོགས་པ། === 
 <big>༉ ལྷོ་ཨེ་ཤེ་ཡི་ཡ་ལུང་ཕྱོགས་མཐུན་འབྲེལ་ཚོགས་པ་འདི་ ལུང་ཕྱོགས་གཞུང་འབྲེལ་གྱི་ལས་ཁུངས་ཨིནམ་མ་ཚད་སྲིད་འབྲེལ་སྤྱི་ཚོགས་ཡང་ཨིན་པས། དེ་དམིགས་ཡུལ་ངོ་མ་ར་ འཐུས་མི་རྒྱལ་ཁབ་ཚུ་ནང་ཁ་འཆམས་ཡོད་པའི་གཞི་དོན་གུར་མཉམ་རུབ་ཀྱི་དཔལ་འབྱོར་དང་མི་སྡེ་ཡར་རྒྱས་གཏང་ནི་འདི་ཨིན། (ཤ་ཧིན། ༢༠༡༣)
-ལྷོ་ཨེ་ཤི་་ཡ་ལུང་ཕྱོགས་མཐུན་འབྲེལ་ཚོགས་པ་འདི་ འཛམ་གླིང་སྤྱི་ཚོགས་བཀའ་ཁྲིམས་ཀྱི་རྩ་ཚན་ ༤༢ པ་དང་འཁྲིལ་ཏེ་བརྩམས་ཡོདཔ་ཨིན་མས། ལུང་ཕྱོགས་མཐུན་འབྲེལ་ཚོགས་པ་འདི་ ཌཱ་ཀ་ལུ་སྦེ་སྤྱི་ལོ་ ༡༩༤༨ སྤྱི་ཟླ་ ༡༢ པའི་སྤྱི་ཚེས་ ༨ ལུ་གཞི་བཙུགས་འབད་ནུག། ཚོགས་པའི་དམིགས་གཏད་འདི་གཙོ་བོ་ར་ ལུང་ཕྱོགས་རྒྱལ་ཁབ་འཐུས་མི་གི་ནང་འཁོད་ལུ་ དཔལ་འབྱོར་དང་མི་སྡེ་ གཞན་རིག་གཞུང་དང་ལམ་སྲོལ་གོང་འཕེལ་གཏང་ནིའི་དོན་ལུ་དང་ ལྷག་པར་དུ་ ཡར་རྒྱས་འགྱོ་བའི་བསྒང་ཨིན་མི་ འཐུས་མི་རྒྱལ་ཁབ་ཚུ་གི་བར་ན་ མཐུན་ལམ་དང་མཉམ་འབྲེལ་ ཡར་རྒྱས་གཏང་ནི་འདི་ཨིན། ཚོགས་པ་འདི་གཞི་བཙུགས་འབད་ནི་གི་འཆར་གཞི་འགོ་དང་པ་ བྷང་ལ་དེཤ་གི་སྲིད་འཛིན་ ཟི་ཡུའར་རཽ་མཱན་ གྱིས་ ལྷོ་ཨེ་ཤི་ཡའི་རྒྱལ་ཁབ་ཚུ་ནང་གཟིགས་སྐོར་གནང་སྟེ་ དཔལ་འབྱོར་གོང་འཕེལ་གྱི་དོན་ལུ་ མཐུན་འབྲེལ་ཚོགས་པ་བཟོ་ནི་གི་ འོས་འབབ་ཡོད་མེད་ཀྱི་་བརྟག་དཔྱད་འབད་ནུག། དེ་ལས་ སྤྱི་ལོ་ ༡༩༧༠ སྐོར་ཆ་ལུ་ལྷོ་ཨེ་ཤི་ཡ་དབུས་ཀྱི་རྒྱལ་ཁབ་ བྷང་ལ་དེཤ། འབྲུག། རྒྱ་གར། མཱལ་དིབས། པཱ་ཀིསི་ཏཱན། ཤྲི་ལང་ཀ་རྒྱལ་ཁབ་ཚུ་གིས་ ལྷོ་ཨེ་ཤི་ཡའི་མི་སེར་ཚུ་ མཐུན་ལམ་དང་བློ་གཏད་ གོ་ཤེས་བསམ་ཤེས་ཀྱི་ཐོག་ལས་ ཚོང་འབྲེལ་གྱི་ལཱ་འབད་ནིའི་དོན་ལུ་ དཔལ་འབྱོར་གྱི་སྡེ་ཚན་ཅིག་བཟོ་ནིའི་ཁ་འཆམས་ནུག། སྤྱི་ལོ་ ༡༩༤༣ གྱི་ལོ་ལུ་ བྷང་ལ་དེཤ་གི་རྒྱལ་ས་ཌཱ་ཀ་ལུ་ ཕྱི་འབྲེལ་ལྷན་ཁག་གིས་འགོ་འདྲེན་འཐབ་པའི་རྒྱལ་སྤྱི་གྲོས་ཚོགས་ཀྱི་སྐབས་ལུ་ ལྷོ་ཨེ་ཤི་ཡ་དབུས་ཀྱི་རྒྱལ་ཁབ་ ༧ གྱིས་ལྷོ་ཨེ་ཤི་ཡ་ལུང་ཕྱོགས་མཐུན་འབྲེལ་ཚོགས་པ་གཞི་བཙུགས་འབད་ནི་སྦེ་ཆ་འཇོག་འབད་ནུག། ཚོགས་པ་དེ་གི་ཡོངས་ཁྱབ་དྲུང་ཆེན་གྱི་ཡིག་ཚང་ལྟེ་བ་འདི་ བལ་པོའི་རྒྱལ་ས་ ཀཱཊི་མཱན་ཌུ་ལུ་བཟོ་ནི་སྦེ་ཐག་ཆོད་དེ་ཡོདཔ་མ་ཚད་ གཅིག་སྒྲིལ་བྱེད་ལས་ཀྱི་ལས་རིམ་ ༥ ངོས་འཛིན་འབད་མི་ལས་ སོ་ནམ། མཐའ་ཟུར་གོང་འཕེལ། བརྒྱུད་འབྲེལ་གྱི་འཕྲུལ་ཆ། གནམ་གཤིས་རིག་པ། གསོ་བ་དང་མི་རློབས་ཀྱི་ལས་སྣ་ཚུ་ཨིན། ཨཕ་ག་ནིསི་ཏཱན་ཡང་ སྤྱི་ལོ་ ༢༠༠༧ ལུ་འཐུས་མི་སྦེ་ འཛུལ་ཞུགས་འབད་ཡོདཔ་དང་ གཞན་ལྟ་རྟོག་འབད་མི་རྒྱལ་ཁབ་</big> European Union, US, China  <big>ལ་སོགས་པ་སྒྲིག་མཐུན་གྱི་སྒོ་ལས་རྒྱལ་ཁབ་ ༩ ངོས་འཛིན་འབད་ཡོདཔ་ཨིན། (པྼི་ཡ།)
-ཚོགས་པའི་ཡིག་ཚང་ལྟེ་བ་ཀཱཊི་མཱན་ཌུ་ལུ་ཡོད། འཐུས་མི་རྒྱལ་ཁབ་ཀྱི་འགོ་ཁྲིད་ཚུ་གི་དོན་ལུ་ ལོ་བསྟར་བཞིན་དུ་གྲོས་འཛོམས་ཚར་རེ་འགོ་འདྲེན་འཐབ་དོ་ཡོདཔ་ཨིན་རུང་ རྒྱལ་ཁབ་འདི་ཚུ་གི་ཕྱི་འབྲེལ་བློན་པོ་ཚུ་གི་དོན་ལུ་ ཞལ་འཛོམས་ལོ་གཅིག་ལུ་ཚར་གཉིས་འབདཝ་ཨིན་མས། ཚོགས་པ་དེ་ནང་ ད་ལྟོ་ རྒྱ་གར། འབྲུག། བལ་པོ། ཨཕ་ག་ནིསི་ཏཱན། པ་ཀིསི་ཏཱན། ཤྲི་ལང་ཀ། མཱལ་དིབསི། བྷང་ལ་དེཤ་བཅས་ འཐུས་མི་ ༨ ཡོདཔ་ཨིན། རྒྱལ་ཁབ་ ༧ བྷང་ལ་དེཤ། རྒྱ་གར། མཱལ་དིབསི། བལ་པོ། པ་ཀིསི་ཏཱན། ཤྲི་ལང་ཀ་གི་ ཕྱི་འབྲེལ་དྲུང་ཆེན་ཚུ་གི་ཞལ་འཛོམས་ འགོ་དང་པ་འདི་ ཤྲི་ལང་ཀའི་རྒྱལ་ས་ ཀོ་ལོམ་བྷོ་ལུ་སྦེ་ སྤྱི་ལོ་ ༡༩༨༡ སྤྱི་ཟླ་ ༤ པའི་ནང་འཚོགས་ཡོདཔ་ཨིན།
+ལྷོ་ཨེ་ཤི་་ཡ་ལུང་ཕྱོགས་མཐུན་འབྲེལ་ཚོགས་པ་འདི་ འཛམ་གླིང་སྤྱི་ཚོགས་བཀའ་ཁྲིམས་ཀྱི་རྩ་ཚན་ ༤༢ པ་དང་འཁྲིལ་ཏེ་བརྩམས་ཡོདཔ་ཨིན་མས། ལུང་ཕྱོགས་མཐུན་འབྲེལ་ཚོགས་པ་འདི་ ཌཱ་ཀ་ལུ་སྦེ་སྤྱི་ལོ་ ༡༩༤༨ སྤྱི་ཟླ་ ༡༢ པའི་སྤྱི་ཚེས་ ༨ ལུ་གཞི་བཙུགས་འབད་ནུག། ཚོགས་པའི་དམིགས་གཏད་འདི་གཙོ་བོ་ར་ ལུང་ཕྱོགས་རྒྱལ་ཁབ་འཐུས་མི་གི་ནང་འཁོད་ལུ་ དཔལ་འབྱོར་དང་མི་སྡེ་ གཞན་རིག་གཞུང་དང་ལམ་སྲོལ་གོང་འཕེལ་གཏང་ནིའི་དོན་ལུ་དང་ ལྷག་པར་དུ་ ཡར་རྒྱས་འགྱོ་བའི་བསྒང་ཨིན་མི་ འཐུས་མི་རྒྱལ་ཁབ་ཚུ་གི་བར་ན་ མཐུན་ལམ་དང་མཉམ་འབྲེལ་ ཡར་རྒྱས་གཏང་ནི་འདི་ཨིན། ཚོགས་པ་འདི་གཞི་བཙུགས་འབད་ནི་གི་འཆར་གཞི་འགོ་དང་པ་ བྷང་ལ་དེཤ་གི་སྲིད་འཛིན་ ཟི་ཡུའར་རཽ་མཱན་ གྱིས་ ལྷོ་ཨེ་ཤི་ཡའི་རྒྱལ་ཁབ་ཚུ་ནང་གཟིགས་སྐོར་གནང་སྟེ་ དཔལ་འབྱོར་གོང་འཕེལ་གྱི་དོན་ལུ་ མཐུན་འབྲེལ་ཚོགས་པ་བཟོ་ནི་གི་ འོས་འབབ་ཡོད་མེད་ཀྱི་་བརྟག་དཔྱད་འབད་ནུག། དེ་ལས་ སྤྱི་ལོ་ ༡༩༧༠ སྐོར་ཆ་ལུ་ལྷོ་ཨེ་ཤི་ཡ་དབུས་ཀྱི་རྒྱལ་ཁབ་ བྷང་ལ་དེཤ། འབྲུག། རྒྱ་གར། མཱལ་དིབས། པཱ་ཀིསི་ཏཱན། ཤྲི་ལང་ཀ་རྒྱལ་ཁབ་ཚུ་གིས་ ལྷོ་ཨེ་ཤི་ཡའི་མི་སེར་ཚུ་ མཐུན་ལམ་དང་བློ་གཏད་ གོ་ཤེས་བསམ་ཤེས་ཀྱི་ཐོག་ལས་ ཚོང་འབྲེལ་གྱི་ལཱ་འབད་ནིའི་དོན་ལུ་ དཔལ་འབྱོར་གྱི་སྡེ་ཚན་ཅིག་བཟོ་ནིའི་ཁ་འཆམས་ནུག། སྤྱི་ལོ་ ༡༩༤༣ གྱི་ལོ་ལུ་ བྷང་ལ་དེཤ་གི་རྒྱལ་ས་ཌཱ་ཀ་ལུ་ ཕྱི་འབྲེལ་ལྷན་ཁག་གིས་འགོ་འདྲེན་འཐབ་པའི་རྒྱལ་སྤྱི་གྲོས་ཚོགས་ཀྱི་སྐབས་ལུ་ ལྷོ་ཨེ་ཤི་ཡ་དབུས་ཀྱི་རྒྱལ་ཁབ་ ༧ གྱིས་ལྷོ་ཨེ་ཤི་ཡ་ལུང་ཕྱོགས་མཐུན་འབྲེལ་ཚོགས་པ་གཞི་བཙུགས་འབད་ནི་སྦེ་ཆ་འཇོག་འབད་ནུག། ཚོགས་པ་དེ་གི་ཡོངས་ཁྱབ་དྲུང་ཆེན་གྱི་ཡིག་ཚང་ལྟེ་བ་འདི་ བལ་པོའི་རྒྱལ་ས་ ཀཱཊི་མཱན་ཌུ་ལུ་བཟོ་ནི་སྦེ་ཐག་ཆོད་དེ་ཡོདཔ་མ་ཚད་ གཅིག་སྒྲིལ་བྱེད་ལས་ཀྱི་ལས་རིམ་ ༥ ངོས་འཛིན་འབད་མི་ལས་ སོ་ནམ། མཐའ་ཟུར་གོང་འཕེལ། བརྒྱུད་འབྲེལ་གྱི་འཕྲུལ་ཆ། གནམ་གཤིས་རིག་པ། གསོ་བ་དང་མི་རློབས་ཀྱི་ལས་སྣ་ཚུ་ཨིན། ཨཕ་ག་ནིསི་ཏཱན་ཡང་ སྤྱི་ལོ་ ༢༠༠༧ ལུ་འཐུས་མི་སྦེ་ འཛུལ་ཞུགས་འབད་ཡོདཔ་དང་ གཞན་ལྟ་རྟོག་འབད་མི་རྒྱལ་ཁབ་</big> European Union, US, China  <big>ལ་སོགས་པ་སྒྲིག་མཐུན་གྱི་སྒོ་ལས་རྒྱལ་ཁབ་ ༩ ངོས་འཛིན་འབད་ཡོདཔ་ཨིན། (པྼི་ཡ།)<br>
+ཚོགས་པའི་ཡིག་ཚང་ལྟེ་བ་ཀཱཊི་མཱན་ཌུ་ལུ་ཡོད། འཐུས་མི་རྒྱལ་ཁབ་ཀྱི་འགོ་ཁྲིད་ཚུ་གི་དོན་ལུ་ ལོ་བསྟར་བཞིན་དུ་གྲོས་འཛོམས་ཚར་རེ་འགོ་འདྲེན་འཐབ་དོ་ཡོདཔ་ཨིན་རུང་ རྒྱལ་ཁབ་འདི་ཚུ་གི་ཕྱི་འབྲེལ་བློན་པོ་ཚུ་གི་དོན་ལུ་ ཞལ་འཛོམས་ལོ་གཅིག་ལུ་ཚར་གཉིས་འབདཝ་ཨིན་མས། ཚོགས་པ་དེ་ནང་ ད་ལྟོ་ རྒྱ་གར། འབྲུག། བལ་པོ། ཨཕ་ག་ནིསི་ཏཱན། པ་ཀིསི་ཏཱན། ཤྲི་ལང་ཀ། མཱལ་དིབསི། བྷང་ལ་དེཤ་བཅས་ འཐུས་མི་ ༨ ཡོདཔ་ཨིན། རྒྱལ་ཁབ་ ༧ བྷང་ལ་དེཤ། རྒྱ་གར། མཱལ་དིབསི། བལ་པོ། པ་ཀིསི་ཏཱན། ཤྲི་ལང་ཀ་གི་ ཕྱི་འབྲེལ་དྲུང་ཆེན་ཚུ་གི་ཞལ་འཛོམས་ འགོ་དང་པ་འདི་ ཤྲི་ལང་ཀའི་རྒྱལ་ས་ ཀོ་ལོམ་བྷོ་ལུ་སྦེ་ སྤྱི་ལོ་ ༡༩༨༡ སྤྱི་ཟླ་ ༤ པའི་ནང་འཚོགས་ཡོདཔ་ཨིན།<br>
 ལྷོ་ཨེ་ཤི་ཡའི་དབུ་ཁྲིད་ཞལ་འཛོམས་ནང་ འཐུས་མི་རྒྱལ་ཁབ་/གཞུང་ག་རའི་ འགོ་དཔོན་ཚུ་ཡོདཔ་ལས་ འ་ནཱི་འདི་ ཚོགས་པ་འདི་གི་མངོན་མཐོའི་འདུས་ཚོགས་ཨིན། དབུ་ཁྲིད་ཞལ་འཛོམས་འདི་ རྟག་པར་རྒྱུན་དུ་ ལོ་ངོ་ ༢ ཀྱི་ཤུལ་ལས་འགོ་འདྲེན་འཐབ་ཨིནམ་དང་དེ་ཡང་ འཐུས་མི་རྒྱལ་ཁབ་ཚུའི་མིང་གི་གོ་རིམ་ཨིང་སྐད་ཀྱི་གསལ་བྱེད་དང་འཁྲིལ་ཏེ་ཡོད་མི་ལྟར་དུ་ སྐོར་རྒྱབ་རྐྱབ་ཅི་ར་ འགོ་འདྲེན་འཐབ་ནི་ཡོད། ལྷོ་ཨེ་ཤི་ཡ་ལུང་ཕྱོགས་མཐུན་འབྲེལ་ཚོགས་པ་གཞི་བཙུགས་འབད་དགོ་པའི་དམིགས་ཡུལ་གཙོ་བོ་ར་ ལྷོ་ཨེ་ཤི་ཡའི་ལུང་ཕྱོགས་ཀྱི་མི་རློབས་ཚུ་གི་སྐྱིད་སྡུག་བལྟ་ནི་དང་ མི་ཚེའི་གནས་སྟངས་ཡར་རྒྱས་གཏང་ནི། དཔལ་འབྱོར་གོང་འཕེལ་གྱི་མགྱོགས་འགྲོས་སེང་ནི། མི་སྡེ་གོང་འཕེལ་དང་དཔལ་འབྱོར་ཡར་རྒྱས་བཏང་སྟེ་ གང་ཟག་གང་རུང་གི་ མི་ཚེ་ཚུལ་མཐུན་ལུ་གནས་ཏེ་ རང་གི་ལྕོགས་གྲུབ་ཧ་གོ་ཚུགསཔ་བཟོ་ནི། གཅིག་མཐུན་དང་རང་དགོ་རང་འདྲོང་རྒྱ་སྐྱེད་གཏང་ནི་དང་ ཕན་ཚུན་གྱི་བློ་གཏད་ལུ་ཕན་གྲོགས་འབད་ནི། བདག་དང་གཞན་གཉིས་ཀའི་དཀའ་ཐུབ་ཚུ་ ངོས་ལེན་དང་ ཧ་གོ་ཚུགསཔ་བཟོ་ནི། དཔལ་འབྱོར་ མི་སྡེ་ ལམ་སྲོལ་དང་མཚན་རིག་གི་ལཱ་ཚུ་ནང་ མཉམ་འབྲེལ་དང་བདག་གཞན་གཉིས་ཀ་ལུ་རྒྱབ་སྐྱོར་འབད་ནི་འདི་ རྒྱ་སྐྱེད་འབད་ནི། གཞན་ཡར་རྒྱས་འགྱོ་བའི་བསྒང་ཡོད་པའི་ རྒྱལ་ཁབ་ཚུ་ནང་མཐུན་འབྲེལ་དམ་ཟབ་བཟོ་ནི། རྒྱལ་སྤྱིའི་འཛོམ་གནས་ཀྱི་ནང་ལུ་ སྤྱི་མཐུན་མཐའ་དོན་གྱི་གནད་དོན་གུར་མཉམ་འབྲེལ་རྩ་བརྟན་བཟོ་ནི་དང་ རྒྱལ་སྤྱི་དང་ལུང་ཕྱོགས་ཀྱི་ལས་སྡེ་དང་ལས་ཁུངས་ཚུ་དང་གཅིག་ཁར་མཉམ་འབྲེལ་འབད་ནི།</big> (Revised SAARC brief)
-<big>ལྷོ་ཨེ་ཤི་ཡ་ལུང་ཕྱོགས་མཐུན་འབྲེལ་ཚོགས་པའི་གཞི་རྩ་ངོ་མ་ར་ འཐུས་མི་རྒྱལ་ཁབ་ཚུ་གི་རང་དབང་རང་བཙན། མངའ་ཁོངས་ཆིག་སྒྲིལ། ཆབ་སྲིད་འདྲ་མཉམ་དང་། རང་དབང་ལུ་གུས་ཞབས་འབད་ནི། རྒྱལ་ཁབ་རང་སོའི་ནང་འཁོད་ཀྱི་གནས་སྟངས་ལུ་རང་དཀྲོག་མི་འབད་ནི། ཕན་ཚུན/སྤྱི་མཐུན་ཁེ་ཕན་ལུ་མཉམ་འབྲེལ་འབད་ནི། གྲོས་ཆོད་ག་བཟུམ་ར་འབད་རུང་ མགྲིན་གཅིག་གི་ཐོག་ལས་གྲོས་ཐག་གཅད་ནི་དང་ གྲོས་ཐག་གཅད་པའི་སྐབས་ཚོགསགྲངས་ ༨ ངེས་པར་དུ་དགོ།
-ཟུང་ཕྱོགས་ཀྱི་གནད་དོན་ག་བཟུམ་ཡོད་རུང་ བཟུར་ཏེ་བཞག་ཞིནམ་ལས་ རྒྱལ་ཁབ་ཕྱོགས་མང་གི་གནད་དོན་གུར་ ཟུང་ཕྱོགས་ཀྱི་ཕྱོགས་ལྷུང་སྤུ་ཙམ་ཡང་མེད་པར་གྲོས་བསྡུར་འབད་དགོ། ཚོགས་པ་འདི་གི་ལས་འགན་དང་འགན་ཁུར་ཚུ་ག་ར་ ལྕོགས་གྲུབ་ཅན་གྱི་ཚོགས་པའི་ལས་ཁུངས་ཁག་མ་འདྲཝ་ དེ་ཡང་ བློན་པོའི་ལྷན་ཚོགས། གཏན་འཇགས་ཚོགས་ཆུང་། ཐབས་རིག་ཚོགས་ཆུང་། ལས་རིམ་ཚོགས་ཆུང་དང་ དྲུང་ཆེན་ཡིག་ཚང་ཚུ་གིས་འབདཝ་ཨིན། བློན་པོའི་ལྷན་ཚོགས་འདི་ནང་ འཐུས་མི་རྒྱལ་ཁབ་ཀྱི་ཕྱི་འབྲེལ་བློན་པོ་ཚུ་ཡོདཔ་ཨིན། ལྷན་ཚོགས་འདི་གི་ལཱ་འགན་འདི་ ༡༽ ཚོགས་པ་འདི་གི་སྲིད་བྱུས་བཟོ་ནི། ༢༽ཚོགས་པའི་ཡར་རྒྱས་ཀྱི་གནས་སྟངས་བསྐྱར་ཞིབ་འབད་ནི། ༣༽མཉམ་འབྲེལ་འབད་ནི་གི་གནད་དོན་གསརཔ་ཚུ་གྲོས་ཐག་གཅད་ནི། ༤༽ཚོགས་པའི་ཐབས་ལམ་གསརཔ་གཞི་བཙུགས་འབད་ནི།༼དགོ་མི་དགོ་དང་འཁྲིལ་ནི།༽ ཚོགས་པའི་དོན་ལུ་སྤྱིར་བཏང་ཁེ་ཕན་ཡོད་པའི་གཞི་དོན་གུར་ཐག་གཅད་ནི་ཚུ་ཨིན། བློན་པོའི་ལྷན་ཚོགས་ཀྱི་འཐུས་མི་ཚུ་གིས་ ལོ་རེའི་ནང་ ཚར་གཉིས་འཛོམས་འདུ་ནང་བཅའ་མར་གཏོགསཔ་ཨིན། 
+<big>ལྷོ་ཨེ་ཤི་ཡ་ལུང་ཕྱོགས་མཐུན་འབྲེལ་ཚོགས་པའི་གཞི་རྩ་ངོ་མ་ར་ འཐུས་མི་རྒྱལ་ཁབ་ཚུ་གི་རང་དབང་རང་བཙན། མངའ་ཁོངས་ཆིག་སྒྲིལ། ཆབ་སྲིད་འདྲ་མཉམ་དང་། རང་དབང་ལུ་གུས་ཞབས་འབད་ནི། རྒྱལ་ཁབ་རང་སོའི་ནང་འཁོད་ཀྱི་གནས་སྟངས་ལུ་རང་དཀྲོག་མི་འབད་ནི། ཕན་ཚུན/སྤྱི་མཐུན་ཁེ་ཕན་ལུ་མཉམ་འབྲེལ་འབད་ནི། གྲོས་ཆོད་ག་བཟུམ་ར་འབད་རུང་ མགྲིན་གཅིག་གི་ཐོག་ལས་གྲོས་ཐག་གཅད་ནི་དང་ གྲོས་ཐག་གཅད་པའི་སྐབས་ཚོགསགྲངས་ ༨ ངེས་པར་དུ་དགོ།<br>
+ཟུང་ཕྱོགས་ཀྱི་གནད་དོན་ག་བཟུམ་ཡོད་རུང་ བཟུར་ཏེ་བཞག་ཞིནམ་ལས་ རྒྱལ་ཁབ་ཕྱོགས་མང་གི་གནད་དོན་གུར་ ཟུང་ཕྱོགས་ཀྱི་ཕྱོགས་ལྷུང་སྤུ་ཙམ་ཡང་མེད་པར་གྲོས་བསྡུར་འབད་དགོ། ཚོགས་པ་འདི་གི་ལས་འགན་དང་འགན་ཁུར་ཚུ་ག་ར་ ལྕོགས་གྲུབ་ཅན་གྱི་ཚོགས་པའི་ལས་ཁུངས་ཁག་མ་འདྲཝ་ དེ་ཡང་ བློན་པོའི་ལྷན་ཚོགས། གཏན་འཇགས་ཚོགས་ཆུང་། ཐབས་རིག་ཚོགས་ཆུང་། ལས་རིམ་ཚོགས་ཆུང་དང་ དྲུང་ཆེན་ཡིག་ཚང་ཚུ་གིས་འབདཝ་ཨིན། བློན་པོའི་ལྷན་ཚོགས་འདི་ནང་ འཐུས་མི་རྒྱལ་ཁབ་ཀྱི་ཕྱི་འབྲེལ་བློན་པོ་ཚུ་ཡོདཔ་ཨིན། ལྷན་ཚོགས་འདི་གི་ལཱ་འགན་འདི་ ༡༽ ཚོགས་པ་འདི་གི་སྲིད་བྱུས་བཟོ་ནི། ༢༽ཚོགས་པའི་ཡར་རྒྱས་ཀྱི་གནས་སྟངས་བསྐྱར་ཞིབ་འབད་ནི། ༣༽མཉམ་འབྲེལ་འབད་ནི་གི་གནད་དོན་གསརཔ་ཚུ་གྲོས་ཐག་གཅད་ནི། ༤༽ཚོགས་པའི་ཐབས་ལམ་གསརཔ་གཞི་བཙུགས་འབད་ནི།༼དགོ་མི་དགོ་དང་འཁྲིལ་ནི།༽ ཚོགས་པའི་དོན་ལུ་སྤྱིར་བཏང་ཁེ་ཕན་ཡོད་པའི་གཞི་དོན་གུར་ཐག་གཅད་ནི་ཚུ་ཨིན། བློན་པོའི་ལྷན་ཚོགས་ཀྱི་འཐུས་མི་ཚུ་གིས་ ལོ་རེའི་ནང་ ཚར་གཉིས་འཛོམས་འདུ་ནང་བཅའ་མར་གཏོགསཔ་ཨིན། <br>
 གཏན་འཇགས་ཚོགས་ཆུང་འདི་ནང་ འཐུས་མི་རྒྱལ་ཁབ་ཀྱི་ཕྱི་འབྲེལ་དྲུང་ཆེན་ཚུ་ཡོདཔ་ཨིན། ཁོང་གི་འགན་ཁུར་ངོ་མ་ར ༡༽མཉམ་འབྲེལ་གྱི་ལས་སྣ་ག་བཟུམ་ཡོད་རུང་ སྤྱིར་བཏང་ལྟ་རྟོག་དང་འགོ་འདྲེན་འཐབ་ཨིན། ༢༽ ལས་འགུལ་དང་ལས་རིམ་ཚུ་ངོས་ལེན་འབད་ནི་དང་ དེའི་དོན་ལུ་ མ་དངུལ་ཟད་འགྲོ་དབྱེ་ཞིབ་འབད་ནི། ༣༽ལས་སྡེ་ནང་འཁོད་ཀྱི་ གཙོ་རིམ་ཚུ་གཏན་འབེབས་འབད་ནི། ༤༽ལུང་ཕྱོགས་དང་ཕྱི་ཁའི་ཐོན་སྐྱེད་ཚུ་མཁོ་སྒྲུབ་འབད་ནི། ༥༽མཉམ་འབྲེལ་གྱི་ས་ཁོངས་ཚུ་ འོས་ལྡན་གྱི་ཞིབ་ཚོལ་འབད་དེ་ངོས་འཛིན་འབད་ནི་ཚུ་ཨིན། ཁོང་གི་བཀའ་ཁྲིམས་ལྟར་དུ་འབད་བ་ཅིན་ དུས་ནམ་དང་ནམ་ར་འབད་རུང་ བསྟུན་འགྲོས་འབད་དགོ་པའི་གནས་སྟངས་རེ་ཤརཝ་ད་ ངེས་པར་དུ་འཛོམས་དགོ། སྤྱིར་བཏང་འ་ནཱི་ཚོགས་ཆུང་གི་དབུ་ཁྲིད་ཞལ་འཛོམས་དང་ བློན་པོ་ལྷན་འཛོམས་འཚོགས་ནིའི་དུས་ཚོད་ཀྱི་སྔ་གོང་ལུ་འཚོགསཔ་ཨིན།
-ལས་རིམ་ཚོགས་ཆུང་འདི་ཚོགས་པ་འདི་གི་བཀའ་ཁྲིམས་འདུས་ཚོགས་ཡང་ཨིན། ཁོང་གི་འགན་ཁུར་ངོ་མ་ར་ གཏན་འཇགས་ཚོགས་ཆུང་ལུ་གཤམ་གསལ་ལུ་བཀོད་དེ་ཡོད་པའི་གནད་དོན་གུར་གྲོགས་རམ་འབད་ནི་འདི་ཨིན། ལུང་ཕྱོགས་ལས་འགུལ་གདམ་འཐུ་འབད་ནི། ཕྱི་ཁའི་ཐོན་སྐྱེད་ཚུ་མཁོ་སྒྲུབ་འབད་ནི། ལས་སྡེ་ནང་འཁོད་ལུ་ལཱ་དང་་ལས་རིམ་ཚུ་ གཙོ་རིམ་བསྒྲིགས་ཏེ་འབད་ནི། ལོ་བསྟར་གྱི་ལས་སྣ་ཚུ་བསྐྱར་ཞིབ་འབད་ནི་ཚུ་ཨིན། དེ་ཁར་ཕྱི་འབྲེལ་ལྷན་ཁག་གི་མཉམ་འབྲེལ་དྲུང་ཆེན་གྱི་གནས་ཚད་ནང་ཡོད་པའི་འགན་འཛིན་འགོ་དཔོན་ཚུ་ཡོདཔ་ཨིན། ཚོགས་ཆུང་འདི་གི་འཐུས་མི་ཚུ་གིས་ གཏན་འཇགས་ཚོགས་ཆུང་གི་སྔ་གོང་ལུ་ ཞལ་འཛོམས་འཚོགསཔ་མ་ཚད་ ཡང་ཅིན་ ལོ་མཇུག་བསྡུ་ཁམས་ལུ་འཚོགསཔ་ཨིན།
-ཐབས་རིག་ཚོགས་ཆུང་འདི་ནང་འཐུས་མི་རྒྱལ་ཁབ་ཀྱི་ངོ་ཚབ་ དམིགས་བསལ་ལས་སྡེ་ཁག་གི་མཁས་མཆོག་ཚུ་ཡོདཔ་ཨིན། ཁོང་གི་ལཱ་འགན་འདི་ ས་ཁོངས་སོ་སོ་དང་འཁྲིལ་ཏེ་ ལས་འགུལ་གྱི་ལས་རིམ་བཟོ་ནི་ཚུ་ཨིན། དེ་མ་ཚད་ ལས་རིམ་དེ་ཚུ་ ལྟ་རྟོག་འབད་དེ་ གཏན་འཇགས་ཚོགས་ཆུང་ལུ་ སྙན་ཞུ་འབད་དགོ། དེ་ལས་ ལཱ་འབད་མི་སྡེ་ཚན་དེ་ནང་ འཐུས་མི་རྒྱལ་ཁབ་ཀྱི་ངོ་ཚབ་ཚུ་ཡོདཔ་ཨིན། ཁོང་གི་ལས་འགན་ཡང་ཐབས་རིག་ཚོགས་ཆུང་དང་ཆ་འདྲ་སུ་ཅིག་ར་ཨིན། གཞན་ཡང་དམིགས་པ་དང་འཁྲིལ་བའི་ལས་འགུལ་གྱི་ལས་རིམ་ཚུ་གི་ཐབས་ལམ་དང་ མ་དངུལ་གྱི་འབྱུང་ཁུངས་ཚུ་ གྲོས་འཆར་བཀོདཔ་ཨིན། ད་ལྟོ་ལཱ་འབད་མི་ཚོགས་ཆུང་ ༤ ཡོདཔ་དང་ དེ་ཡང་ ༡༽བརྒྱུད་འབྲེལ་གྱི་འཕྲུལ་རིག། ༢༽སྐྱེ་ལྡན་འཕྲུལ་རིག། ༣༽ལྟ་བཤལ། ༤༽ནུས་རྫས་ཚུ་ཨིན། 
-མཇུག་རང་ ལྷོ་ཨེ་ཤི་ཡ་གི་དྲུང་ཆེན་ཡིག་ཚང་འདི་སྤྱི་ལོ ༡༩༨༧ ལུ་གཞི་བཙུགས་འབད་ཡོདཔ་དང་ སྤྱི་ལོ་ ༡༩༨༨སྤྱི་ཟླ་ ༡ པའི་ཚེས་ ༡ ལས་ཡིག་ཚང་འདི་བཀོལ་སྤྱོད་འབད་ནི་འགོ་བཙུགས་ནིག། ཁོང་གི་ལཱ་འགན་ངོ་མ་རང་ ཚོགས་པ་འདི་གི་ལས་རོམ་ཚུ་ ལྟ་རྟོག་འབད་དེ་འགོ་འདྲེན་འཐབ་ནི་དང་ ཚོགས་པའི་ཞལ་འཛོམས་ཀྱི་སྐབས་ལུ་ཞབས་ཏོག་ཞུ་ནི་ དེ་ལས་བརྒྱུད་འབྲེལ་གྱི་བརྒྱུད་ལམ་སྦེ་ཕྱག་ཞུཝ་ཨིན། དྲུང་ཆེན་ཡིག་ཚང་འདི་ ཡོངས་ཁྱབ་དྲུང་ཆེན་གྱི་འགོ་ཁྲིད་འབད་དེ་ ཁོ་གི་འོག་ལུ་འཐུས་མི་རྒྱལ་ཁབ་ལས་མདོ་ཆེན་རེ་རེ་འབདཝ་ད་ མདོ་ཆེན་བསྡོམས་ཏེ་ ༨ ཡོདཔ་ཨིན། ཡོངས་ཁྱབ་དྲུང་ཆེན་འདི་ འཐུས་མི་རྒྱལ་ཁབ་ཚུ་ལས་ ལོ་ངོ་ ༣ གྱི་རིང་ལུ་བཙག་འཐུ་འབདཝ་ཨིནམ་དང་ དེ་ཡང་རྒྱལ་ཁབ་ཀྱི་མིང་ ཨིང་སྐད་ཀྱི་གསལ་བྱེད་ཀྱི་གོ་རིམ་དང་འཁྲིལ་ཏེ་འཐུས་མི་རྒྱལ་ཁབ་ཚུ་གི་བར་ན་ སྐོར་རྒྱབ་སྦེ་འབདཝ་ཨིན།</big> (Revised SAARC brief)
-
-
+ལས་རིམ་ཚོགས་ཆུང་འདི་ཚོགས་པ་འདི་གི་བཀའ་ཁྲིམས་འདུས་ཚོགས་ཡང་ཨིན། ཁོང་གི་འགན་ཁུར་ངོ་མ་ར་ གཏན་འཇགས་ཚོགས་ཆུང་ལུ་གཤམ་གསལ་ལུ་བཀོད་དེ་ཡོད་པའི་གནད་དོན་གུར་གྲོགས་རམ་འབད་ནི་འདི་ཨིན། ལུང་ཕྱོགས་ལས་འགུལ་གདམ་འཐུ་འབད་ནི། ཕྱི་ཁའི་ཐོན་སྐྱེད་ཚུ་མཁོ་སྒྲུབ་འབད་ནི། ལས་སྡེ་ནང་འཁོད་ལུ་ལཱ་དང་་ལས་རིམ་ཚུ་ གཙོ་རིམ་བསྒྲིགས་ཏེ་འབད་ནི། ལོ་བསྟར་གྱི་ལས་སྣ་ཚུ་བསྐྱར་ཞིབ་འབད་ནི་ཚུ་ཨིན། དེ་ཁར་ཕྱི་འབྲེལ་ལྷན་ཁག་གི་མཉམ་འབྲེལ་དྲུང་ཆེན་གྱི་གནས་ཚད་ནང་ཡོད་པའི་འགན་འཛིན་འགོ་དཔོན་ཚུ་ཡོདཔ་ཨིན། ཚོགས་ཆུང་འདི་གི་འཐུས་མི་ཚུ་གིས་ གཏན་འཇགས་ཚོགས་ཆུང་གི་སྔ་གོང་ལུ་ ཞལ་འཛོམས་འཚོགསཔ་མ་ཚད་ ཡང་ཅིན་ ལོ་མཇུག་བསྡུ་ཁམས་ལུ་འཚོགསཔ་ཨིན།<br>
+ཐབས་རིག་ཚོགས་ཆུང་འདི་ནང་འཐུས་མི་རྒྱལ་ཁབ་ཀྱི་ངོ་ཚབ་ དམིགས་བསལ་ལས་སྡེ་ཁག་གི་མཁས་མཆོག་ཚུ་ཡོདཔ་ཨིན། ཁོང་གི་ལཱ་འགན་འདི་ ས་ཁོངས་སོ་སོ་དང་འཁྲིལ་ཏེ་ ལས་འགུལ་གྱི་ལས་རིམ་བཟོ་ནི་ཚུ་ཨིན། དེ་མ་ཚད་ ལས་རིམ་དེ་ཚུ་ ལྟ་རྟོག་འབད་དེ་ གཏན་འཇགས་ཚོགས་ཆུང་ལུ་ སྙན་ཞུ་འབད་དགོ། དེ་ལས་ ལཱ་འབད་མི་སྡེ་ཚན་དེ་ནང་ འཐུས་མི་རྒྱལ་ཁབ་ཀྱི་ངོ་ཚབ་ཚུ་ཡོདཔ་ཨིན། ཁོང་གི་ལས་འགན་ཡང་ཐབས་རིག་ཚོགས་ཆུང་དང་ཆ་འདྲ་སུ་ཅིག་ར་ཨིན། གཞན་ཡང་དམིགས་པ་དང་འཁྲིལ་བའི་ལས་འགུལ་གྱི་ལས་རིམ་ཚུ་གི་ཐབས་ལམ་དང་ མ་དངུལ་གྱི་འབྱུང་ཁུངས་ཚུ་ གྲོས་འཆར་བཀོདཔ་ཨིན། ད་ལྟོ་ལཱ་འབད་མི་ཚོགས་ཆུང་ ༤ ཡོདཔ་དང་ དེ་ཡང་ ༡༽བརྒྱུད་འབྲེལ་གྱི་འཕྲུལ་རིག། ༢༽སྐྱེ་ལྡན་འཕྲུལ་རིག། ༣༽ལྟ་བཤལ། ༤༽ནུས་རྫས་ཚུ་ཨིན། <br>
+མཇུག་རང་ ལྷོ་ཨེ་ཤི་ཡ་གི་དྲུང་ཆེན་ཡིག་ཚང་འདི་སྤྱི་ལོ ༡༩༨༧ ལུ་གཞི་བཙུགས་འབད་ཡོདཔ་དང་ སྤྱི་ལོ་ ༡༩༨༨སྤྱི་ཟླ་ ༡ པའི་ཚེས་ ༡ ལས་ཡིག་ཚང་འདི་བཀོལ་སྤྱོད་འབད་ནི་འགོ་བཙུགས་ནིག། ཁོང་གི་ལཱ་འགན་ངོ་མ་རང་ ཚོགས་པ་འདི་གི་ལས་རོམ་ཚུ་ ལྟ་རྟོག་འབད་དེ་འགོ་འདྲེན་འཐབ་ནི་དང་ ཚོགས་པའི་ཞལ་འཛོམས་ཀྱི་སྐབས་ལུ་ཞབས་ཏོག་ཞུ་ནི་ དེ་ལས་བརྒྱུད་འབྲེལ་གྱི་བརྒྱུད་ལམ་སྦེ་ཕྱག་ཞུཝ་ཨིན། དྲུང་ཆེན་ཡིག་ཚང་འདི་ ཡོངས་ཁྱབ་དྲུང་ཆེན་གྱི་འགོ་ཁྲིད་འབད་དེ་ ཁོ་གི་འོག་ལུ་འཐུས་མི་རྒྱལ་ཁབ་ལས་མདོ་ཆེན་རེ་རེ་འབདཝ་ད་ མདོ་ཆེན་བསྡོམས་ཏེ་ ༨ ཡོདཔ་ཨིན། ཡོངས་ཁྱབ་དྲུང་ཆེན་འདི་ འཐུས་མི་རྒྱལ་ཁབ་ཚུ་ལས་ ལོ་ངོ་ ༣ གྱི་རིང་ལུ་བཙག་འཐུ་འབདཝ་ཨིནམ་དང་ དེ་ཡང་རྒྱལ་ཁབ་ཀྱི་མིང་ ཨིང་སྐད་ཀྱི་གསལ་བྱེད་ཀྱི་གོ་རིམ་དང་འཁྲིལ་ཏེ་འཐུས་མི་རྒྱལ་ཁབ་ཚུ་གི་བར་ན་ སྐོར་རྒྱབ་སྦེ་འབདཝ་ཨིན།</big> (Revised SAARC brief)<br>
 === ཁུངས་གཏུག། ===
 # Gyamtsho, T. (1996). A History of Bhutan. Thimphu, Bhutan: Ministry of Health and Education.
 # Wangchuk, L.  (2008) Facts about Bhutan. Thimphu, Absolute Bhutan Books.
