--- a/ཕྱི་འབྲེལ་དང་འབྲེལ་བའི་ནང་དོན།.mw
+++ b/ཕྱི་འབྲེལ་དང་འབྲེལ་བའི་ནང་དོན།.mw
@@ -40,6 +40,14 @@
 ལས་རིམ་ཚོགས་ཆུང་འདི་ཚོགས་པ་འདི་གི་བཀའ་ཁྲིམས་འདུས་ཚོགས་ཡང་ཨིན། ཁོང་གི་འགན་ཁུར་ངོ་མ་ར་ གཏན་འཇགས་ཚོགས་ཆུང་ལུ་གཤམ་གསལ་ལུ་བཀོད་དེ་ཡོད་པའི་གནད་དོན་གུར་གྲོགས་རམ་འབད་ནི་འདི་ཨིན། ལུང་ཕྱོགས་ལས་འགུལ་གདམ་འཐུ་འབད་ནི། ཕྱི་ཁའི་ཐོན་སྐྱེད་ཚུ་མཁོ་སྒྲུབ་འབད་ནི། ལས་སྡེ་ནང་འཁོད་ལུ་ལཱ་དང་་ལས་རིམ་ཚུ་ གཙོ་རིམ་བསྒྲིགས་ཏེ་འབད་ནི། ལོ་བསྟར་གྱི་ལས་སྣ་ཚུ་བསྐྱར་ཞིབ་འབད་ནི་ཚུ་ཨིན། དེ་ཁར་ཕྱི་འབྲེལ་ལྷན་ཁག་གི་མཉམ་འབྲེལ་དྲུང་ཆེན་གྱི་གནས་ཚད་ནང་ཡོད་པའི་འགན་འཛིན་འགོ་དཔོན་ཚུ་ཡོདཔ་ཨིན། ཚོགས་ཆུང་འདི་གི་འཐུས་མི་ཚུ་གིས་ གཏན་འཇགས་ཚོགས་ཆུང་གི་སྔ་གོང་ལུ་ ཞལ་འཛོམས་འཚོགསཔ་མ་ཚད་ ཡང་ཅིན་ ལོ་མཇུག་བསྡུ་ཁམས་ལུ་འཚོགསཔ་ཨིན།<br>
 ཐབས་རིག་ཚོགས་ཆུང་འདི་ནང་འཐུས་མི་རྒྱལ་ཁབ་ཀྱི་ངོ་ཚབ་ དམིགས་བསལ་ལས་སྡེ་ཁག་གི་མཁས་མཆོག་ཚུ་ཡོདཔ་ཨིན། ཁོང་གི་ལཱ་འགན་འདི་ ས་ཁོངས་སོ་སོ་དང་འཁྲིལ་ཏེ་ ལས་འགུལ་གྱི་ལས་རིམ་བཟོ་ནི་ཚུ་ཨིན། དེ་མ་ཚད་ ལས་རིམ་དེ་ཚུ་ ལྟ་རྟོག་འབད་དེ་ གཏན་འཇགས་ཚོགས་ཆུང་ལུ་ སྙན་ཞུ་འབད་དགོ། དེ་ལས་ ལཱ་འབད་མི་སྡེ་ཚན་དེ་ནང་ འཐུས་མི་རྒྱལ་ཁབ་ཀྱི་ངོ་ཚབ་ཚུ་ཡོདཔ་ཨིན། ཁོང་གི་ལས་འགན་ཡང་ཐབས་རིག་ཚོགས་ཆུང་དང་ཆ་འདྲ་སུ་ཅིག་ར་ཨིན། གཞན་ཡང་དམིགས་པ་དང་འཁྲིལ་བའི་ལས་འགུལ་གྱི་ལས་རིམ་ཚུ་གི་ཐབས་ལམ་དང་ མ་དངུལ་གྱི་འབྱུང་ཁུངས་ཚུ་ གྲོས་འཆར་བཀོདཔ་ཨིན། ད་ལྟོ་ལཱ་འབད་མི་ཚོགས་ཆུང་ ༤ ཡོདཔ་དང་ དེ་ཡང་ ༡༽བརྒྱུད་འབྲེལ་གྱི་འཕྲུལ་རིག། ༢༽སྐྱེ་ལྡན་འཕྲུལ་རིག། ༣༽ལྟ་བཤལ། ༤༽ནུས་རྫས་ཚུ་ཨིན། <br>
 མཇུག་རང་ ལྷོ་ཨེ་ཤི་ཡ་གི་དྲུང་ཆེན་ཡིག་ཚང་འདི་སྤྱི་ལོ ༡༩༨༧ ལུ་གཞི་བཙུགས་འབད་ཡོདཔ་དང་ སྤྱི་ལོ་ ༡༩༨༨སྤྱི་ཟླ་ ༡ པའི་ཚེས་ ༡ ལས་ཡིག་ཚང་འདི་བཀོལ་སྤྱོད་འབད་ནི་འགོ་བཙུགས་ནིག། ཁོང་གི་ལཱ་འགན་ངོ་མ་རང་ ཚོགས་པ་འདི་གི་ལས་རོམ་ཚུ་ ལྟ་རྟོག་འབད་དེ་འགོ་འདྲེན་འཐབ་ནི་དང་ ཚོགས་པའི་ཞལ་འཛོམས་ཀྱི་སྐབས་ལུ་ཞབས་ཏོག་ཞུ་ནི་ དེ་ལས་བརྒྱུད་འབྲེལ་གྱི་བརྒྱུད་ལམ་སྦེ་ཕྱག་ཞུཝ་ཨིན། དྲུང་ཆེན་ཡིག་ཚང་འདི་ ཡོངས་ཁྱབ་དྲུང་ཆེན་གྱི་འགོ་ཁྲིད་འབད་དེ་ ཁོ་གི་འོག་ལུ་འཐུས་མི་རྒྱལ་ཁབ་ལས་མདོ་ཆེན་རེ་རེ་འབདཝ་ད་ མདོ་ཆེན་བསྡོམས་ཏེ་ ༨ ཡོདཔ་ཨིན། ཡོངས་ཁྱབ་དྲུང་ཆེན་འདི་ འཐུས་མི་རྒྱལ་ཁབ་ཚུ་ལས་ ལོ་ངོ་ ༣ གྱི་རིང་ལུ་བཙག་འཐུ་འབདཝ་ཨིནམ་དང་ དེ་ཡང་རྒྱལ་ཁབ་ཀྱི་མིང་ ཨིང་སྐད་ཀྱི་གསལ་བྱེད་ཀྱི་གོ་རིམ་དང་འཁྲིལ་ཏེ་འཐུས་མི་རྒྱལ་ཁབ་ཚུ་གི་བར་ན་ སྐོར་རྒྱབ་སྦེ་འབདཝ་ཨིན།</big> (Revised SAARC brief)<br>
+=== འཛམ་གླིང་སྤྱི་ཚོགས་གོང་འཕེལ་ལས་རིམ་གྱི་གཞི་བཀོད།་༼ཡུ་ཨེན་ཌི་པི༽ ===
+<big>༉ འཛམ་གླིང་སྤྱི་ཚོགས་གོང་འཕེལ་ལས་རིམ་གྱི་གཞི་བཀོད་འདི་ འཛམ་གླིང་སྤྱི་ཚོགས་ཀྱི་གོང་འཕེལ་མཐུད་སྦྲེལ་འབད་མི་ཅིག་ཨིནམ་མ་ཚད་ མི་སྡེའི་ནང་མི་སེར་ཚུ་གི་མི་ཚེའི་གནས་སྟངས་ཡར་རྒྱས་གཏང་ནིའི་དོན་ལུ་ རྒྱལ་ཁབ་ཚུ་ ཤེས་ཡོན་དང་།ཉམས་མྱོང་། ཐོན་སྐྱེད་ཚུ་དང་མཐུད་སྦྲེལ་འབད་ནི་ལུ་ སྐུལ་ཁྱབ་བརྡ་སྤྲོད་འབདཝ་ཨིན། གཞན་ཡང་རྒྱལ་ཁབ་ཚུ་ནང་དབུལ་ཕོངས་ཀྱི་དཀའ་ངལ་བསལ་ནི་དང་ ཡུན་བརྟན་དཔལ་འབྱོར་གོང་འཕེལ་དང་ མི་སྟོབས་གོང་འཕེལ་གཏང་ནི་ལུ་གཙོ་བོར་བཏོནམ་ཨིན། འ་ནཱི་འདི་ གོང་འཕེལ་གྱི་དོན་ལུ་གྲོགས་རམ་བྱིན་མི་འཛམ་གླིང་སྤྱི་ཚོགས་ཀྱི་ལས་སྡེ་སྦོམ་ཤོས་ཅིག་ཨིན། ༼ལི་ལི་དབང་ཕྱུག། ༢༠༠༨ ཤོག་གྲངས་ ༡༨༡།༽<br>
+འཛམ་གླིང་སྤྱི་ཚོགས་གོང་འཕེལ་གཞི་བཀོད་འདི་ སྤྱི་ལོ་ ༡༩༤༩ ལུ་གཞི་བཙུགས་གནང་ནུག། དེ་ཡང་ འཛམ་གླིང་སྤྱི་ཚོགས་རྒྱ་བསྐྱེད་ལས་རིམ་གྱི་བཟོ་རིག་གྲོགས་རམ་དང་ སྤྱི་ལོ་ ༡༩༥༨ ལུ་གཞི་བཙུགས་འབད་མི་འཛམ་གླིང་སྤྱི་ཚོགས་གལ་ཅན་༼དམིགས་བསལ།༽མ་དངུལ་གཉིས་གཅིག་ཁར་བསྡབ་སྟེ་བཟོ་ནུག། ད་རེས་ཡོད་པའི་འཛམ་གླིང་སྤྱི་ཚོགས་གོང་འཕེལ་ལས་རིམ་གྱི་གཞི་བཀོད་འདི་ འཛམ་གླིང་སྤྱི་ཚོགས་ཡོངས་ཁྱབ་ལྷན་འཛོམས་ཀྱིས་ སྤྱི་ལོ་ ༡༩༦༥ སྤྱི་ཟླ་ ༡༡ པའི་ཚེས་ ༢༢ ལུ་གཞི་བཙུགས་གནང་ནུག། ལས་སྡེ་འདི་གི་འཛིན་སྐྱོང་བཀོད་ཚོགས་ཀྱི་འཐུས་མི་ཚུ་ རྒྱལ་ཁབ་ ༣༦ གི་ངོ་ཚབ་ཀྱིས་ སྐོར་རྒྱབ་རྐྱབ་སྟེ་ལཱ་འགན་འབགཔ་ཨིན། མ་གཞི་ཡིག་ཚང་འདི་གི་འཐུས་མི་ཚུ་ ལུང་ཕྱོགས་སྡེ་ཚན་ ༥ གི་ངོ་ཚབ་ཚུ་ཨིན་རུང་ བཀོད་ཚོགས་ཀྱི་དམིགས་གཏད་གཙོ་བོ་ར་ ཡུ་ཨེན་ཌི་པི་གི་ལས་སྣ་གུར་བཀོད་རྒྱ་གཏང་ནི་དང་། རྒྱབ་སྐྱོར་འབད་ནི། རྒྱལ་ཁབ་ཚུ་ནང་གོང་འཕེལ་འགྱོ་བཞིན་ཡོད་པའི་དགོས་མཁོ་ཚུ་ ངོས་ལེན་འབད་ནི་འདི་ཨིན། འཛིན་སྐྱོང་བཀོད་ཚོགས་བདག་སྐྱོང་ཡིག་ཚང་གིས་ འཛིན་སྐྱོང་བཀོད་ཚོགས་ཀྱི་ལས་སྣ་ག་རའི་ནང་གཡོག་རྒྱུག་དོ་ཡོདཔ་མ་ཚད་ བཀོད་ཚོགས་འཐུས་མི་ཚུ་ལུ་གནས་ཚུལ་དུས་ཚོད་ཁར་སྤྲོད་ནི་དང་ཞབས་ཏོག་འགྲུབ་ནི་ཚུ་ཨིན། དེ་བཟུམ་སྦེ་གཞན་ཡང་ ཡིག་ཚང་གི་བཀོད་ཚོགས་འཐུས་མི་ཚུ་གི་ཞལ་འཛོམས་བཅའ་སྒྲིག་རྐྱབ་ནི་དང་ འཐུས་མི་ཚུ་ ལཱ་གི་ས་ཁོངས་ནང་གཟིགས་སྐོར་གནང་པར་འབྱོན་ནིའི་དོན་ལུ་འགོ་འདྲེན་འཐབ་ནི་དང་ འཛམ་གླིང་སྤྱི་ཚོགས་ཀྱི་ལས་སྡེ་གཞན་མི་ཚུ་དང་མཐུན་ལམ་མི་ཉམས་གོང་འཕེལ་གཏང་ནི་ཚུ་ཨིན།<br>
+འཛམ་གླིང་སྤྱི་ཚོགས་ཀྱི་རྒྱལ་སྤྱི་གོང་འཕེལ་སྣ་ཁྲིད་འབད་མི་འཛམ་གླིང་སྤྱི་ཚོགས་གོང་འཕེལ་ལས་རིམ་གྱི་གཞི་བཀོད་ཀྱིས་ རྒྱལ་ཁབ་ ༡༧༠ ནང་དབུལ་ཕོངས་རྩ་མེད་གཏང་ནི་དང་ སྙོམ་མེད་མར་ཕབ་འབད་ནི་ཚུ་ཨིན། ཡིག་ཚང་འདི་གིས་ རྒྱལ་ཁབ་ཚུ་ གི་སྲིད་བྱུས་བཟོ་ནི། དབུ་ཁྲིད་གོ་འཕང་གི་ལྕོགས་གྲུབ་གོང་འཕེལ་གཏང་ནི། མཉམ་འབྲེལ་གྱི་འཇོན་ཐང་རྒྱ་བསྐྱེད་འབད་ནི། གཙུག་སྡེའི་ནུས་སྟོབས་ཡར་འཕར་གཏང་ནི། ཡུན་བརྟན་གོང་འཕེལ་གྱི་དམིགས་ཡུལ་འགྲུབ་ནི་ཚུ་ནང་དམིགས་གཏད་བསྐྱེདཔ་ཨིན། དེ་མ་ཚད་ ལཱ་འགན་ངོ་མ་གཅིག་འདི་ ཡུན་བརྟན་གོང་འཕེལ་དང་ དམངས་གཙོའི་རིང་ལུགས་ཀྱི་གཞུང་སྐྱོང་བདེ་སྐྱིད་སྒྲིང་སྒྲི་བཟོ་ནི། གནམ་གཤིས་གནས་སྟངས་དང་ རྐྱེན་ངན་ཚབས་ཆེན་ཚུ་གདོང་ལན་འབད་ནི་ཚུ་ཨིན། འཛམ་གླིང་མཐའ་དབུས་མེད་པར་ ཡུ་ཨེན་ཌི་པི་འདི་ བློ་གཏད་ཅན་/ཡིད་ཆེས་བསྐྱེད་ཚུགས་པའི་གོང་འཕེལ་གྱི་མཉམ་འབྲེལ་པ་སྦེ་ངོས་ལེན་འབད་མི་འདི་གཙོ་བོ་ར་ ཡིག་ཚང་འདི་གིས་ འཛམ་གླིང་སྤྱི་ཚོགས་ཀྱི་གཞི་རྩ་དང་བརྩི་མཐོང་ལུ་གནས་ཏེ་ལཱ་འབད་མི་ལུ་བརྟེན་ཏེ་ཨིན། དུས་རྟག་པར་རྒྱུན་དུ་ འགྱུར་བ་དང་ཤེས་ཡོན་འབད་རུང་། ཉམས་མྱོང་འབད་རུང་། མི་ཚེའི་གནས་སྟངས་ཡར་དྲག་གཏང་ནི་ལུ་ མཉམ་འབྲེལ་འབད་དེ་ལཱ་འབད་ནི་ལུ་གཙོ་བོར་བཏོནམ་ཨིན། <br>
+མཉམ་འབྲེལ་འབད་དེ་ཕྱག་ལཱ་མཛད་ནི་འདི་ ལས་སྡེ་འདི་གི་དམིགས་ཡུལ་ངོ་མ་ཅིག་ཨིན་པའི་ཁར་ ཡར་རྒྱས་གོང་འཕེལ་གྱི་ལས་སྣ་ཚུ་ནང་སྟབས་མ་བདེཝ་ག་བཟུམ་བྱུང་རུང་ ཤེས་ཡོན་དང་ཉམས་མྱོང་གི་ཡོན་ཏན་ལྡན་པའི་མི་སྟོབས་ལེ་ཤ་ཡོདཔ་ལས་ དཀའ་ངལ་ཚུ་བསལ་ཚུགས་དོ་ཡོདཔ་ཨིན། ལྷག་པར་དུ་ རྒྱལ་སྤྱིའི་དངུལ་འབྲེལ་གྱི་གཙུག་སྡེ་ཚུ་ཡང་ མ་དངུལ་གྲོགས་རམ་འབད་སའི་ཡུལ་ངོ་མ་ཅིག་སྦེ་ཡོདཔ་ཨིན། དེ་ཡང་ རྒྱལ་སྤྱིའི་དངུལ་ཁང་ དཔེར་ན་ འཛམ་གླིང་དངུལ་ཁང་། ཨཕ་རི་ཀའི་གོང་འཕེལ་དངུལ་ཁང་། ཨེ་ཤི་ཡའི་གོང་འཕེལ་དངུལ་ཁང་ཚུ་དང་གཅིག་ཁར་ སྒྲིག་མཐུན་གྱི་གན་རྒྱ་ཡང་ཡོདཔ་ཨིན། མ་དངུལ་གྱི་འབྱུང་ཁུངས་གཞན་ཡང་ སྒེར་གྱི་ལས་སྡེ་ཚུ་ཨིནམ་ལས་ ཁོང་གིས་ ཡར་རྒྱས་འགྱོ་བའི་བསྒང་་ཡོད་པའི་རྒྱལ་ཁབ་ཚུ་ནང་རྒྱབ་སྐྱོར་འབད་མི་ལུ་བརྟེན་ གསར་གཏོད་ཀྱི་ཚོང་ལཱ་རྒྱ་སྐྱེད་གཏང་ནི་ལུ་ཕན་ཐོགས་བྱུང་སྟེ་ཡོད།<br>
+དེ་མ་ཚད་ ཚོང་ལམ་གོང་འཕེལ་གཏང་ནིའི་དོན་ལུ་ ཡུ་ཨེན་ཌི་པི་གིས་ གཡུས་ཁའི་བཟོ་སྐྲུན་པ་ཚུ་ རྒྱལ་སྤྱི་ཚོང་ལམ་དང་གཅིག་ཁར་ཡང་མཐུན་འབྲེལ་འབད་བྱིནམ་ཨིན། གཞན་ཡང་ མི་སྡེ་ལས་ཚོགས་ཚུ་བརྒྱུད་དེ་ ལས་སྣ་ཚུ་དང་སྲིད་བྱུས་ཚུ་གཞི་བཙུགས་འབད་དེ་ སྐུལ་ཁྱབ་བརྡ་སྤྲོད་འབདཝ་ཨིན། རྒྱལ་ཁབ་ཀྱི་གནས་ཚད་ནང་ལུ་འབད་བ་ཅིན་ གསོ་བ། ཤེས་རིག། འཐུང་ཆུ་བཀྲམ་སྤེལ། སོ་ནམ་རྒྱ་སྐྱེད་དང་ བསྐྱིན་འགྲུལ་ཆུང་བའི་ཞབས་ཏོག་ཚུ་བྱིན་ནི་ཡོད། དེ་འབདཝ་ལས་ ལས་སྡེ་འདི་ལུ་ ཁས་བླངས་ཀྱི་ཐོག་ལས་ཞབས་ཏོག་འགྲུབ་མི་ཡོངས་གྲགས་ཅན་གྱི་མི་དང་ ཚོང་ཚབ་མཐུན་འབྲེལ་པ་ལེ་ཤ་ཅིག་གིས་ར་ འཛམ་གླིང་ལུ་གནོད་པའི་དོན་ཚན་ཚུ་ གསལ་བསྒྲགས་འབད་དེ་ འཛམ་གླིང་ཞི་བདེ་ཡར་རྒྱས་གཏང་ནི་ལུ་གཙོ་བོར་བཏོནམ་ཨིན།</big> (Sustainable Development Goals, UNDP)<br>
+<big>ཡུ་ཨེན་ཌི་པི་གིས་ འབྲུག་རྒྱལ་ཁབ་ལུ་གྲོགས་རམ་གྱི་ལས་རིམ་འདི་ སྤྱི་ལོ་ ༡༩༧༣ ལས་འགོ་བཙུགས་ཡོདཔ་ཨིན། དེ་ཡང་ མི་སྙོམ་མར་ཕབ་གཏང་ནི་དང་ སྟབས་ཉེས་པའི་མི་ཚུ་ལུ་དབང་ཆ་བྱིན་ཏེ་རྒྱལ་ཡོངས་དགའ་སྐྱིད་དཔལ་འཛོམས་ཀྱི་དམིགས་ཡུལ་འགྲུབ་ནི་ལུ་ ཕན་གྲོགས་འབད་ཡི། ཡུ་ཨེན་ཌི་པི་གི་ཡིག་ཚང་འདི་ རྒྱལ་ཁབ་ནང་ སྤྱི་ལོ་ ༡༩༧༩ ལུ་གཞི་བཙུགས་འབད་ནུག། (ལི་ལི་དབང་ཕྱུག། ༢༠༠༨ ཤོག་གྲངས་ ༡༨༡།). སྤྱི་ལོ་ ༡༩༧༠ གི་སྐབས་ལུ་ ལས་སྡེ་འདི་གིས་ འབྲུག་རྒྱལ་ཁབ་ནང་ ལྟ་བཤལ་ལས་སྡེ་དང་གློག་མེ་ལས་འཛིན་འགོ་བཙུགས་ནིའི་ནང་རྒྱབ་སྐྱོར་འབད་དེ་ཡོདཔ་མ་ཚད་ སྤྱི་ལོ་ ༢༠༠༦ ལུ་ ངན་ལྷད་བཀག་སྡོམ་ལྷན་ཚོགས་གཞི་བཙུགས་འབད་ནི་ལུ་ཡང་ གྲོགས་རམ་འབད་ཡི། འཛམ་གླིང་སྤྱི་ཚོགས་གོང་འཕེལ་ལས་རིམ་གཞི་བཀོད་ཀྱིས་ འབྲུག་གཞུང་ལུ་ ཁག་ཆེ་བའི་གྲོགས་རམ་འབད་དང་འབད་བཞིན་དུ་ཡོདཔ་ཨིན།</big> (UNDP Bhutan). 
+
 === ཁུངས་གཏུག། ===
 # Gyamtsho, T. (1996). A History of Bhutan. Thimphu, Bhutan: Ministry of Health and Education.
 # Wangchuk, L.  (2008) Facts about Bhutan. Thimphu, Absolute Bhutan Books.
@@ -50,3 +58,5 @@
 # Priya, A. (n.d.). South Asian Association For Regional Cooperation: Problems and Prospects.
 # Revised SAARC brief. (n.d.).
 # Shaheen, I. (2013). South Asian Association for Regional Cooperation (SAARC): Its Role, Hurdles and Prospects. ResearchGate , 15 (6), 1.
+# UNDP Bhutan. Retrieved from https://www.undp.org/content/dam/bhutan/UNDP%20Bhutan%20Brochure.pdf
+# Sustainable Development Goals (UNDP). Retrieved from http://www.undp.org/content/dam/undp/library/corporate/brochure/SDGs_Booklet_Web_En.pdf
